--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -832,7 +832,7 @@
  ETS_min_zhu_zhuan_zheng_desc:0 "我们的人民必须认识到：他们自己有能力成为国家的主人，而且他们现在确实是国家的主人。他们曾经被压迫，知道封建主甚至奴隶主无边的权利，他们现在成为自己的主，手中的权利却比前者只多不少。"
  ETS_jie_fang_gong_ren:0 "解放工人"
  ETS_jie_fang_gong_ren_desc:0 "工人是布尔什维克天然的盟友，他将在新疆现代化过程当中成为进步势力的坚实后盾与战斗堡垒，正所以，他们将在无产阶级专政当中处于绝对的优势地位，和农村的进步农民组成统一战线，重重包围落后势力的苟合。"
- ETS_nong_ye_gong_ye_hua:0 "农村机械化"
+ ETS_nong_ye_gong_ye_hua:0 "发放新农具"
  ETS_nong_ye_gong_ye_hua_desc:0 "让农民们了解唯心论的可笑，就应当让他们见识机械的伟力。日收千亩的收割机带来的冲击力要抵过数万篇口口相传的神迹，只要让人类的伟力能够代替神明改造自然，只要让群众从生产中脱出去思考，那么宗教的遮光布便会被轻易撕破。"
  ETS_ge_ming_chong_bai:0 "革命崇拜"
  ETS_ge_ming_chong_bai_desc:0 "在阿巴索夫的手中，权威和正义之声在中亚响彻，革命将不惜一切代价地进行下去，这一切都是为了无产阶级的利益。革命需要的是一支军队，手中拿的不是枪械而是书本，他们用以攻击的不是武力而是文化，每个人都呼喊着“领袖”，但声调和音色却互不相同，这便是领袖和先锋队存在的意义。"
@@ -972,6 +972,9 @@
  xinren.27.t:0 "青年要做好青年的任务"
  xinren.27.d:0 "人类社会的发展经历了无数次的变革和千万次重大事件。这些事件和变革关联于政治、经济、宗教和社会等问题，形成一个又一个阶段，发展到了今天。社会的总趋势以及曾经出现的各种事件和发生在这些问题之上的激烈斗争，产生出了20世纪的文化和科学技术，使人类的思想觉悟得到了发展，于是人们着手解决发生的每一个问题。\n解决社会现象的核心在于解决社会问题。\n如果这个问题能够得到正确地解决，那么人类的社会生活就能得到幸福和安康。\n世界上正确解决这个问题的国家是苏维埃联盟、法兰西公社。\n人们如果需要改变社会状态，建设幸福祥和的生活，解决社会问题，首先就要使青年努力学习，让他们积极参与社会活动。原因在于，如果谁不去熟悉社会问题，不认识社会现象，不进行认真思考，那么他只不过是一个空想家而已。今天，应该要认识人民的文化素质、情感心理、物质生活、保健事业，要认识到人民对文化教育的需求和渴望达到了何等高涨的程度。\n充分估计上述问题，首先要看社会是在向前发展还是陷入愚昧落后和迷信之中。解决这些问题，青年应该结合客观实际，不分工种，不讲职位，时时刻刻全力以赴团结协作，努力奋斗。\n目前什么问题最为重要，有哪些基本问题需要去解决呢？\n目前最为重要的头等大事就是建立民主制度，开展民主运动，落实民主政治。\n这是用血的代价争取而来的，是我们祖祖辈辈盼望已久的伟大理想。\n所以说，我们青年的首要任务就是要实现民主制度，用科学的手段，用通俗易懂的方法，准确无误地向人民群众进行宣传。如果不重视这项工作，不向人民群众宣传民主制度以及实现这一民主制度的方法，那么显然这是对我们的先辈和同仁，更为重要的是对于我们在浴血奋战中牺牲的先烈是一种欠账的行为。\n必须要改善人民的生活，提高人民的精神风貌。\n我们的人民在过去独裁政权的黑暗统治下，挣扎在水深火热之中，生活极为艰难困苦。由于精神受封建制度的毒害，迷信、愚昧和落后极度泛滥，导致政治上、宗教上热衷于听信各种谣言，沾染恶习，陷入贫困，家庭破裂，甚至不知道自己是什么人，也不知道自己在干什么。\n只有改善了人民的经济和社会生活，提高了人民的精神风貌引导人民走向正确的方向，才算我们为解决各种现实问题准备了条件。"
  xinren.27.a:0 "务必努力"
- xinren.26.t:0 "奉至仁至慈的真主之名"
- xinren.26.d:0 "第三国际的考察团行至东突厥斯，他们行过阡陌，目睹异样景象：高耸的宣礼塔上不再传来传统的呼唤，而是夹杂着教义的革命歌声；清真寺的门口悬挂着旗帜，其上书写“信仰与正义是革命的双翼”。\n观察者面面相觑，既觉诧异，又感不解。他们私语道：“这是一个令人迷惑的国家。宗教与革命纠缠，信仰与政治交织，竟以这样的方式展现。”\n他们的困惑与质疑传至阿合买提江耳中。领袖带着笑意接待了考察团：“诸位朋友，我知你们心中不解，为何在这里，革命披上了信仰的外衣......沙漠里的花，难免会有些畸形。”\n“革命若无信仰为根，便如浮萍，无处生长。”阿合买提江抬手指向远方的绿洲，“这片沙漠的人民世代仰望真主，他们从祈祷中汲取力量，借信仰安放痛苦。若要唤醒这片土地，不从他们的信仰出发，又如何能使他们与革命同行？”\n考察团中有人不解地问：“但这样的革命，难道不会走向迷失？信仰的力量是否会反噬你们的理想？”\n阿合买提江微微一笑，语气如清晨的风：“不，信仰的本质是真理，而真理的道路，唯有以公义与和平为方向。我们从《古兰经》中寻得智慧，将革命的理念融入信仰的解读。这不是背弃，而是延续。”\n考察团的成员陷入沉思，而街头巷尾却已然传颂起阿合买提江的名字。人们高声歌颂：“他是我们的领袖，也是主的仆人！革命与信仰皆在他手中合而为一！”\n百姓们聚在一起，挥舞旗帜，脸上洋溢着幸福的光彩。党将粮食与织物分给穷苦的邻人，将学堂与田地向孤儿寡母敞开。有人说：“若无革命党，我们依旧生活在被压迫的阴影下；若无信仰，此处便仍然被称呼为新疆。”"
- xinren.26.a:0 "“主啊，愿这沙漠的花能以你的光辉盛开。”"
+ xinren.28.t:0 "奉至仁至慈的真主之名"
+ xinren.28.d:0 "第三国际的考察团行至东突厥斯，他们行过阡陌，目睹异样景象：高耸的宣礼塔上不再传来传统的呼唤，而是夹杂着教义的革命歌声；清真寺的门口悬挂着旗帜，其上书写“信仰与正义是革命的双翼”。\n观察者面面相觑，既觉诧异，又感不解。他们私语道：“这是一个令人迷惑的国家。宗教与革命纠缠，信仰与政治交织，竟以这样的方式展现。”\n他们的困惑与质疑传至阿合买提江耳中。领袖带着笑意接待了考察团：“诸位朋友，我知你们心中不解，为何在这里，革命披上了信仰的外衣......沙漠里的花，难免会有些畸形。”\n“革命若无信仰为根，便如浮萍，无处生长。”阿合买提江抬手指向远方的绿洲，“这片沙漠的人民世代仰望真主，他们从祈祷中汲取力量，借信仰安放痛苦。若要唤醒这片土地，不从他们的信仰出发，又如何能使他们与革命同行？”\n考察团中有人不解地问：“但这样的革命，难道不会走向迷失？信仰的力量是否会反噬你们的理想？”\n阿合买提江微微一笑，语气如清晨的风：“不，信仰的本质是真理，而真理的道路，唯有以公义与和平为方向。我们从《古兰经》中寻得智慧，将革命的理念融入信仰的解读。这不是背弃，而是延续。”\n考察团的成员陷入沉思，而街头巷尾却已然传颂起阿合买提江的名字。人们高声歌颂：“他是我们的领袖，也是主的仆人！革命与信仰皆在他手中合而为一！”\n百姓们聚在一起，挥舞旗帜，脸上洋溢着幸福的光彩。党将粮食与织物分给穷苦的邻人，将学堂与田地向孤儿寡母敞开。有人说：“若无革命党，我们依旧生活在被压迫的阴影下；若无信仰，此处便仍然被称呼为新疆。”"
+ xinren.28.a:0 "“主啊，愿这沙漠的花能以你的光辉盛开。”"
+ xinren.29.t:0 "偶像"
+ xinren.29.d:0 "随着革命的胜利，东突厥斯坦的大街小巷逐渐被一种独特的景象所覆盖。红旗飘扬，宣扬着革命理想的口号在墙壁上跃然可见，而其中最为引人注目的，是一张张革命领袖阿巴索夫的画像。这些画像遍布各个角落——从市集的门头到巷道的墙壁，从学校的教室到工厂的墙上。每一幅画像中的阿巴索夫，面容庄重，目光坚毅，仿佛无所不能的英雄。\n阿巴索夫看着这些画像，心中满是复杂的情感。尽管他早已是革命的核心领导者，但这些画像所传达的权威和尊敬，依然让他感到沉重。他知道，自己背负的不仅是革命的未来，还有每一个百姓对他的期望和信任。然而，身为刚成年不久的青年，他仍然感到内心的迷茫与不安。\n有一天，他在街头走过，一群普通百姓在街角停下脚步，看到他从眼前走过，纷纷低头行礼。那一刻，阿巴索夫感到一种从未有过的压力。人们的目光充满敬仰，仿佛他是一位无所不能的领袖，而不是一个刚刚踏入成人世界的年轻人。\n一位年长的商贩见到他，走上前，眼中带着虔诚与崇敬：“阿巴索夫同志，您真是我们的救星。”\n阿巴索夫强忍住内心的不适，微微点头，“那是因为人民的支持，革命才得以成功。”但内心的疑虑却愈加强烈。他不过是个孩子，哪有什么能力承受如此巨大的期待？这些百姓眼中的他，仿佛早已超越了人类的界限，成为了安拉般的存在。然而，他明白，这些赞美与崇敬，都是建立在他肩上的责任与期望之上。\n走在街头时，他看到那些巨大的画像，所有的眼睛都在注视着他。每一个画中的阿巴索夫都显得庄严且不容忽视，他的眼神中充满了决断与坚毅，那是他所渴望具备的力量。然而，面对现实，他仍然感到一种无形的压力，仿佛随时可能崩溃。毕竟，他还是一个经历过战斗和革命洗礼的年轻人，许多时刻，他的内心并不像画中所呈现的那样坚不可摧。\n一位年青的士兵走到他身旁，语气激动地向他打着招呼：“阿巴索夫同志！”\n阿巴索夫勉强微笑，心中却是一片沉寂。每一次听到这种话语，他都会感到压力山大。领袖的光环太重了，几乎让他窒息。他内心明白，他还远未可以承担这份责任，这一切却似乎早已注定了。\n他转过身，走进一条人迹罕至的小巷，那里没有喧嚣，也没有崇拜的目光，只有冷静和寂静。阿巴索夫闭上眼睛，深深地吸了一口气。"
+ xinren.29.a:0 "“我只是个普通人，但我不能像普通人一样了”"
