--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -697,7 +697,7 @@
  ETS_fan_yao_nan:0 "樊耀南的残军"
  ETS_fan_yao_nan_desc:0 "新疆内战结束后，汉人军阀带着残兵败将和金银珠宝狼狈的流窜到马家境内，与他们不同，樊耀南的部分残部率亲兵驻留当地，以保护汉人为己任，甚至显露出一定程度的三民主义倾向。麦斯武德政变未遂导致的混乱局面使得此地幸运的留存至今，既然平等的民族政府已经建成，我们是时候派人去进行合并协商，共图大业了。"
  ETS_wu_fei_qi_zong:0 "吾并非其众"
- ETS_wu_fei_qi_zong_desc:0 "通过一系列的彻底改革，民主革命党可以自豪的向共产国际递上我们的答卷：东突厥斯坦或是新疆已经成为世界每个左翼势力对民族关系处理，保卫民族团结意识和实施民族自治的满分答卷，我们的完全胜利向三山之间，两河之中，一墙之内的普罗大众证明了一件事：§R我们§!和§B他们§!不同！"
+ ETS_wu_fei_qi_zong_desc:0 "通过一系列的彻底改革，民主革命党可以自豪的向第三国际递上我们的答卷：东突厥斯坦或是新疆已经成为世界每个左翼势力对民族关系处理，保卫民族团结意识和实施民族自治的满分答卷，我们的完全胜利向三山之间，两河之中，一墙之内的普罗大众证明了一件事：§R我们§!和§B他们§!不同！"
 
  ETS_he_ai_de_fu:0 "和蔼的父"
  ETS_he_ai_de_fu_desc:0 "阿不都克里木·阿巴索夫向来是民族军总指挥波利诺夫最受信任的副手。他是十月革命辐射到新疆的具体体现，他已经下定了决心，势必要在新疆重燃十月革命的烽火。"
@@ -919,7 +919,7 @@
  xinren.9.a:0 "“先知，我们愿意加入...”"
  xinren.10.t:0 "人人皆为圣裔"
  xinren.10.d:0 "革命之后，村中设立夜校，教员们召集村民学习文字，阿不力克木也被鼓励去学习。烛光摇曳，映照在他满是皱纹的脸上，他低着头，仿佛害怕自己与知识的世界之间太过遥远。\n\n那夜，教员翻开了一本《古兰经》，似乎和以前的布道者并无区别，只是从聆听变成了朗读。阿不力克木指着文字缓慢诵读道：“真主的子民不可忍受压迫，也不可容忍邪恶的统治者。真主创造人类，使其昂首行于大地，而不是低眉跪伏于暴君的脚下。”\n\n阿不力克木的双眼睁大了，他从未听过这样的教诲。他怯声问道：“教员，这是《古兰经》中的话吗？我以前并没有从教士阿訇口中听闻。”\n\n教员微微一笑，目光如烛火般温暖：“兄弟，真主赋予每个人尊严和智慧。他希望他的子民团结起来，对抗压迫者，使公平与正义降临大地。”\n\n教员指着一行经文，耐心地教阿不力克木认字。他说：“这是‘真理’的文字；这是‘公义’的文字；这是‘自由’的文字。”\n\n阿不力克木不再低头看自己的脚，而是抬头呆滞地仰望星空。他明白了：贫困与愚昧不是命运的桎梏，而是压迫者强加的枷锁，而他作为真主的子民，理应砸烂枷锁，站立起来。\n\n当阿不力克木从夜校回到家中，他不再沉默。他站在夫人面前，脱去了夫人的头纱：“无论是谁，再也不能使我们低头跪拜！这是主的意志！”"
- xinren.10.a:0 "“按劳呼艾克拜尔（真主至大）”"
+ xinren.10.a:0 "“安拉乎艾克白勒（真主至大）”"
  xinren.11.t:0 "野公猪之死"
  xinren.11.d:0 "乌斯满站在一座废弃的牧场旁，身后的残部七零八落。冷风掠过草原，卷起沙尘，像是嘲笑这些败军。乌斯满裹紧了身上的军衣，目光扫过面前的一群战士，这些人是他唯一的依靠，也是他赌上一切的筹码。\n\n有士兵试探着劝道：“将军，全国农民协会已经撤回了伊犁，我们再拖下去只会被白军围剿，不如也撤回去，保存实力...”\n\n乌斯满冷笑一声，拔出手枪狠狠地敲击着腰间的皮带，声音像是雷鸣般在寒冷的空气中炸裂：“回东突厥斯坦？回去听阿合买提江那些人指手画脚吗？他们那些布尔什维克，想让那个达列力汗来取代我，让我成为笑话！告诉你们，我乌斯满绝不会回新疆！我要跟他们斗争到底！”\n\n他的眼神扫过那些低头沉默的战士。“他们以为，我乌斯满会低头认命？不会！我们要在这里打下去！白军、布尔什维克，谁都别想将我们赶尽杀绝。我们还有枪，还有马，还有这片草原！”\n\n士兵们彼此对视，有人显得迟疑，但更多的人选择低头沉默。他们知道，乌斯满是一个固执的人，他的野心注定他无法忍受屈从。\n\n乌斯满继续说道：“想要活下去的可以走，回到东突厥斯坦，去听那些软弱的人命令你们。可我，乌斯满·巴尔图，绝不会走！在这里，我们仍然是军队，仍然是战士！在这里，我们还能为自己的尊严而战！”\n\n乌斯满缓缓举起手中的枪，朝着远方一望无际的地平线指去：“我们会在这里扎根，用游击打击敌人。白军想要夺走这片草原，俄罗斯人想要统治这些我们，那他们就得付出代价！”\n\n这番话点燃了士兵们心中的最后一丝信念。尽管他们明知希望渺茫，前路险恶，但乌斯满的狂热似乎有着一种无法抗拒的吸引力，让人宁可跟随他踏上孤注一掷的道路。\n\n夜幕降临，破乱不堪的骑兵逐渐隐没在黑暗之中。乌斯满站在队伍的最后，望着远处那些闪烁的火光，嘴角浮现一抹冷笑。他心里明白，自己已经没有退路，但正是这样的孤注一掷，才能成就他心中的梦想——哪怕是从瓦砾之中重新燃起的微弱火光，也绝不让那些觊觎他权力的人得逞。"
  xinren.11.a:0 "阿拉什的夜空下，一支残军悄然走向死亡"
