--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -615,6 +615,7 @@
  EST_must_return: "§R民主革命党将尽力弥补东突厥斯坦独立运动对他民族同胞的野蛮行径。§!"
  EST_keep_our_self: "§R我们将全力稳固苏维埃的现有局势！§!"
  ETS_war_is_over: "§R已经没有战争需要继续了§!"
+ ETS_OUR_LOSS: "§R我们输掉了这一切§!"
  ETS_yi_wu_ji_hua_tt: "§R我们将开始新疆工业化的进程§!"
  ALO_get_no_shi: "未失守 £trigger_yes"
  ALO_get_ye_shi: "已失守 £trigger_no"
@@ -643,6 +644,7 @@
  ETS_qian_wang_de_li_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，协约国对于捅俄罗斯人一刀子一定很感兴趣。"
  ETS_qian_wang_bei_jing:0 "前往北京的使臣"
  ETS_qian_wang_bei_jingi_desc:0 "敌人的敌人就是朋友，对于我们如今的大敌俄罗斯人而言，他们树敌众多，北京的皇帝对于捅俄罗斯人一刀子一定很感兴趣。"
+ ETS_fa_dong_ren_ming:0 "发动人民"
  ETS_shi_yue_yu_huo:0 "十月的余火"
  ETS_shi_yue_yu_huo_desc:0 "当我们在中亚独立抗战，艰难护家的时，如天降甘霖之前的闪电一般惊喜的事发生了。东亚的革命同志从硝烟中站起，解放东亚势在必得，而且如果我们挥兵一处，则兵锋无往不利。§R全世界无产者，联合起来！§!"
  ETS_war_timer:0 "战争！"
