--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -649,6 +649,8 @@
  ETS_shi_yue_yu_huo_desc:0 "当我们在中亚独立抗战，艰难护家的时，如天降甘霖之前的闪电一般惊喜的事发生了。东亚的革命同志从硝烟中站起，解放东亚势在必得，而且如果我们挥兵一处，则兵锋无往不利。§R全世界无产者，联合起来！§!"
  ETS_war_timer:0 "战争！"
 
+ FRA_Develop_ETS:0 "发展[FROM.GetNameDef]"
+
  ETS_di_yi_wu_nian_category:0 "一五计划"
  ETS_develop_zhun_ga_er_oil_wells:0 "开发准噶尔油田"
  ETS_develop_ta_ke_la_ma_oil_wells:0 "开发塔克拉玛干油田"
@@ -906,7 +908,7 @@
  xinren.5.d:0 "南疆的地主阿訇们打错算盘了，他们天真的以为民族军的战士们会为他们做马前卒，打倒了大暴君铁木尔的余孽后毕恭毕敬的把奶与蜜交给他们，自己又可以让他们舒舒服服的回到以前的生活，让他们再一次骑在牧民头上当巴依老爷。\n\n不，这再也不会发生了，给主的子民带来痛苦的国王，伯克，喀孜，巴依或者乡长，凡是腐朽的事物，凡是利己和自私，都将被不留余地的清算。\n\n“老子杀的就是你统治贵族！杀掉他几十万的贵族，杀光！”率先进入南疆的乌斯满骑着高大的骏马，其命令宛如雷电，愤怒的农民从四周将他簇拥，颂着经中的内容。\n\n“火狱是他们的床，也是他们的被，我要这样报酬不义之人。”\n\n“受压迫而被战斗者，已获准还击，因为他们确是受了委屈。”"
  xinren.5.a:0 "点火！"
  xinren.6.t:0 "东突厥斯坦人民大会成立！"
- xinren.6.d:0 "突厥斯坦青年党左翼，东突厥斯坦革命党，穆斯林总工会与乌鲁木齐城中的汉族左翼知识分子组成的新疆共产主义者同盟社经过协商合并组成了东突厥斯坦民主革命党。\n\n全疆各地各民族的代表纷纷收拾行囊，从各地赶赴乌鲁木齐参加东突厥斯坦人民大会的开幕仪式，随着大会的进行，最重要的一个议程：东突厥斯坦民主革命党中央委员会的选举开始了，不出所料的，东突厥斯坦未来的方向担负在民族军两位领导人身上：\n\n阿合买提江提出重新解构伊斯兰传统教义，利用其话语解释马克思主义的社会理论，从而拜托传统迷信和不良传统对革命造成的不良影响。\n\n阿巴索夫仍然坚持波利诺夫等俄国红军留下的政治遗产和预定路线，坚持构建一个政教分离的世俗苏维埃民族共和国。\n\n紧张的统计环节终于结束，人们终于松了一口气。"
+ xinren.6.d:0 "突厥斯坦青年党左翼，东突厥斯坦革命党，穆斯林总工会与乌鲁木齐城中的汉族左翼知识分子组成的新疆共产主义者同盟社经过协商合并组成了东突厥斯坦民主革命党。\n\n全疆各地各民族的代表纷纷收拾行囊，从各地赶赴乌鲁木齐参加东突厥斯坦人民大会的开幕仪式，随着大会的进行，最重要的一个议程：东突厥斯坦民主革命党中央委员会的选举开始了，不出所料的，东突厥斯坦未来的方向担负在民族军两位领导人身上：\n\n阿合买提江提出重新解构伊斯兰传统教义，利用其话语解释马克思主义的社会理论，从而摆脱传统迷信和不良传统对革命造成的不良影响。\n\n阿巴索夫仍然坚持波利诺夫等俄国红军留下的政治遗产和预定路线，坚持构建一个政教分离的世俗苏维埃民族共和国。\n\n紧张的统计环节终于结束，人们终于松了一口气。"
  xinren.6.a:0 "传来讯息：自由雄鹰的长啸响彻天山！"
  xinren.6.b:0 "有人喊叫：这就是你们努力的乐园！"
  xinren.7.t:0 "仁慈之君"
