--- a/localisation/KR_Germany_East_Asia_l_simp_chinese.yml
+++ b/localisation/KR_Germany_East_Asia_l_simp_chinese.yml
@@ -1041,20 +1041,20 @@ GEA_second_expedition_to_China:0 "第二次对华远征"
  GEA_ask_for_ordnance_cost_tt_blocked:0 "§R-15%§! £GER_political"
  GEA_loyal_officer_cost_tt:0 "§G-10%§! £GER_political"
  GEA_loyal_officer_cost_tt_blocked:0 "§R-10%§! £GER_political"
- GEA_attract_oligarchic_investment_cost_tt:0 "§G-15%§! £GER_economy"
- GEA_attract_oligarchic_investment_cost_tt_blocked:0 "§R-15%§! £GER_economy"
- GEA_build_railway_cost_tt:0 "§G-12.5%§! £GER_economy"
- GEA_build_railway_cost_tt_blocked:0 "§R-12.5%§! £GER_economy"
- GEA_get_donations_cost_tt:0 "§G-20%§! £GER_economy"
- GEA_get_donations_cost_tt_blocked:0 "§R-20%§! £GER_economy"
+ GEA_attract_oligarchic_investment_cost_tt:0 "§G-15%§! £GER_economy_icon"
+ GEA_attract_oligarchic_investment_cost_tt_blocked:0 "§R-15%§! £GER_economy_icon"
+ GEA_build_railway_cost_tt:0 "§G-12.5%§! £GER_economy_icon"
+ GEA_build_railway_cost_tt_blocked:0 "§R-12.5%§! £GER_economy_icon"
+ GEA_get_donations_cost_tt:0 "§G-20%§! £GER_economy_icon"
+ GEA_get_donations_cost_tt_blocked:0 "§R-20%§! £GER_economy_icon"
  GEA_meet_with_army_cost_tt:0 "£pol_power §Y25§! £command_power §Y25§!"
  GEA_meet_with_army_cost_tt_blocked:0 "£pol_power §R25§! £command_power §R25§!"
  GEA_get_rifle_cost_tt:0 "§Y30§! £pol_power §G-10%§! £GER_political"
  GEA_get_rifle_cost_tt_blocked:0 "§R30§! £pol_power §R-10%§! £GER_political"
  GEA_get_slave_cost_tt:0 "§Y20§! £pol_power §G-10%§! £GER_political"
  GEA_get_slave_cost_tt_blocked:0 "§R20§! £pol_power §R-10%§! £GER_political"
- GEA_get_mine_cost_tt:0 "§Y100§! £pol_power §G-20%§! £GER_political §G-10%§! £GER_economy"
- GEA_get_mine_cost_tt_blocked:0 "§R100§! £pol_power §R-20%§! £GER_political §R-10%§! £GER_economy"
+ GEA_get_mine_cost_tt:0 "§Y100§! £pol_power §G-20%§! £GER_political §G-10%§! £GER_economy_icon"
+ GEA_get_mine_cost_tt_blocked:0 "§R100§! £pol_power §R-20%§! £GER_political §R-10%§! £GER_economy_icon"
  GEA_we_need_soldier_cost_tt:0 "£command_power §Y25§!"
  GEA_we_need_soldier_cost_tt_blocked:0 "£command_power §R25§!"
  GEA_Allowing_troops_to_plunder_cost_tt:0 "£command_power §Y40§!"
