--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -799,7 +799,7 @@
  ETS_da_ji_ha_de:0 "大吉哈德"
  ETS_da_ji_ha_de_desc:0 "除真主外，别无神灵"
  ETS_zhu_de_ci_yu:0 "主的赐予..."
- ETS_zhu_de_ci_yu_de_desc:0 "“善行不是你们转过脸的方向，而是信仰真主、（被删减）、天使、经典和先知：而且是给予亲属、孤儿、贫困者、乞求者、解救奴隶、坚守祈祷与天课之人...”"
+ ETS_zhu_de_ci_yu_desc:0 "“善行不是你们转过脸的方向，而是信仰真主、（被删减）、天使、经典和先知：而且是给予亲属、孤儿、贫困者、乞求者、解救奴隶、坚守祈祷与天课之人...”"
  ETS_bing_fei_yu_yi_hao_qiang:0 "并非予以豪强"
  ETS_bing_fei_yu_yi_hao_qiang_desc:0 "“他不是信士；当他的邻居挨饿，而他自己却吃的很饱”"
  ETS_lao_you_suo_huo:0 "劳有所获"
