--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -108,6 +108,7 @@
  POLITICS_HNN_LU_DIPING_DESC:0 "鲁涤平，字咏庵，一作咏安，号旡烦，湖南宁乡人。鲁涤平行伍出身，22岁考入湖南兵目学堂，其立场亲革命党，辛亥革命时参与后续各省独立起义运动。1915年加入中华革命党，1922年升任湖南陆军第二师师长。1924年3月，鲁涤平被孙中山任命为禁烟督办，1924年8月辞退此职务。1924年10月，湖南讨贼军改组为建国湘军，鲁涤平担任建国湘军第二军军长。1925年建国湘军改组为国民革命军，鲁涤平成为国民革命军第二军副军长。1926年7月国民党北伐中，升任第二军军长代理兼右翼指挥官。而当大革命失败之后，鲁涤平和国民党内其他右派将领一起聚集在湖南长沙讨论彼此的出路，但是他并没有选择和大部分右派将领一样去投靠云南的唐继尧。而是留在了湖南和赵恒惕政权达成了和解，在赵氏政府下他并不被信任没有重新掌军，而是转为了衡阳市警察局局长，但是也只是一个空头职务，他手下的副局长们都直接听命于赵恒惕而不是他这个局长。"
  POLITICS_HNN_HU_HANMING_DESC:0 "胡汉民，原名衍鸿，字展堂，号不匮室主，广东番禺县人氏，原籍江西吉安府庐陵县延福乡青山村，中国国民党元老和早期主要领导人之一，也是国民党右派公认的领袖。在孙中山死后他和汪兆铭被认为是最有可能的继承人，但是随着1925年他卷入廖仲恺遇刺案，他的党内地位急速下滑，左派们群起而攻之，右派也因为这起事件饱受争议。而汪兆铭和刚刚跻身高层的蒋中正甚至想要治胡汉民于死地，虽然最后因为胡汉民的身份斐然而不了了之，但是他仍然逃不了被判有罪，流放出国。他不得不流亡欧洲，在德国、奥匈、俄罗斯之间辗转。尽管他流亡欧洲，可他仍然心系国内，时常写信与国内好友探讨时局。十余年的光阴并没有磨灭掉他对国家对民族的热爱，如今他终于有机会回到国内，他势必要夺回他失去的一切，领导国民党遵奉孙先生遗志，解放全中国！"
  POLITICS_HNN_HE_HAN_ZONG_DESC:0 "贺衷寒"
+ HNN_Shi_Dingwu: "石顶武"
 
  HNN_Dong_Biwu_hog:0 "董必武"
  HNN_Pong_Dehuai_hog:0 "彭德怀"
@@ -148,7 +149,6 @@
  HNN_mao_ze_dong:0 "毛泽东"
  HNN_dai_jitao:0 "戴季韬"
  HNN_zhou_xicheng:0 "周西成"
- HNN_peng_dehuai:0 "彭德怀"
  HNN_he_long:0 "贺龙"
  HNN_he_jian:0 "何键"
  HNN_song_xilian:0 "宋希濂"
@@ -1125,6 +1125,7 @@
  POLITICS_DAI_BIAO_DA_HUI_DESC:0 "长沙城的晨雾未散，弹孔斑驳的砖墙上已爬满青藤，裂缝里钻出几簇倔强的野菊。城楼高悬的红旗被江风灌满，猎猎作响如鼓点——那是安源矿工用染血的工装布缝制的旗，金线绣着“工农铁血”，旗角拴着一串铜铃，风一动，叮叮当当敲醒整座湘江。\n\n城北纱厂的汽笛裹着工人合唱《国际歌》，烟囱喷出的灰烟成了云，年轻的代表攥着磨破边的笔记本冲进会场，袖口沾着机油和稻壳。\n\n茶馆里飘着辣椒味的争论，老农解开草绳捆的账本，数字歪扭如蚯蚓：“地主跑了，田契烧了，可稻种还在咱手心！”窗外的货郎担挑着油印传单，混在麻糖担子里，一声“卖新历书嘞——”，暗号落地，街角霎时卷起传递火种的私语。\n\n赤卫队的少年们在岸边列队，枪杆上绑着湘绣杜鹃，口号喊到一半，被货轮鸣笛打断，干脆跳上码头木箱，用湘潭话唱起新编花鼓调：“挖穿南岳山，炼钢造铁轨，明年火车轰隆隆，拉着红旗过长江咧——”\n\n老铁匠蹲在工会门口打刀，锤子砸出的星子溅到半空，他说那是“地上冒出的星星，迟早连成新天河”。"
  HNN_Dong_Bi_Wu: "董必武"
  POLITICS_HNN_DONG_BIWU_DESC:0 "1903年，董必武赴武昌参加乡试时，因为好奇而朝衙门内张望，被衙役殴打，他自称“从此恨死当官人”。而与他语言相符的是他是孙中山成立中国同盟会时最早的一批成员。而他的中国同盟会身份之外他也是工团主义在中国传播过程中关键的一环，他在湖南建立了最早的工团党支部，这对日后湖南成为中国工团主义的第二摇篮功不可没。而伴随着孙中山改组成立国民党，他也是最早的持有中国工团党和国民党双重党籍的党员，他也大力推行着工团党与国民党的合作，同时他也目睹着国民党党内层出不穷的党争，左派，右派互相攻伐，尤其是右派不断的对党内的双重党籍问题开火，甚至孙中山对这一切保持着默许，但无论如何他都和其他支持者费尽心力的维持着两党合作。但这一切只持续1926年，那对于中国革命灾难性的一年，随着国民党的全盘瓦解，躲避通缉的董必武又一次回到了他的故乡——湖南，他在那里重建了湖南工团党支部，正如最初他做的那样。但是这一次，当随后到来的同志们要求恢复两党合作时，做为曾经最大力的支持者，他否决了这个提案，他认为革命的失败不仅仅是德国人的干预，更大的问题仍然在于国民党内的不团结，彼此间以党派斗争为第一要务，而不是解放全中国。这样的分歧便随着湖南的地下工作始终，直到赵恒惕妄图在湖南建立独裁，工团党起义成功，而董必武当选湖南省省主席后才有了定论..."
+ HNN_peng_dehuai: "彭德怀"
  POLITICS_HNN_PENG_DEHUAI_DESC:0 "彭德怀生于石潭镇的一户贫农家庭。虽然自家贫寒，但彭德怀常常入迷于爷爷讲述“打富济贫”、“无处不均匀”的太平天国理想。起初，彭德怀曾读过两年传统儒家学堂，但因家境衰败，他不得不退学乞食养家。在家中众多亲人（包括彭母）因贫辞世后，彭德怀开始下煤窑谋生计，在煤窑的日子里他曾和劳工们一起罢工抗议薪资不公而遭到通缉，被迫离家出走。彭德怀的军旅生涯始于汤芗铭部。他作战勇敢，闻名全军，因此平步青云。在参加了将张敬尧驱逐出湖南的战斗后，彭德怀又协助救贫会打死了当地的一个恶霸地主。1923年，他从湖南陆军讲武堂毕业，取名德怀。1926年，彭德怀成为唐生智所部第八军第一师师长后，他把救贫会章程作为士兵委员会的章程。\n\n国民革命军溃败后，第八军受到各方面的威胁，唐生智率部撤入江西，对赵恒惕部退避三舍。闽赣根据地时期，彭在第八军中快速崛起，成为唐生智的得力干将。而且，彭德怀还与贺龙结下深厚友谊，他们都出身农民，憎恶地主恶霸，而且都对农业社会主义情有独钟。彭德怀在闽赣根据地任职将近十年，他踌躇满志，誓要打破帝国主义对中华大地的枷锁，建立一个人人自由平等的新中国。\n\n如今彭德怀肩负起领导湖南工团主义的任务，他是一个很实际的人，他只有一个朴素的梦想：让全中国的农民过上正常人的生活。而不在乎那些所谓的意识形态间的分歧，他已经受够了文官政府间互相推诿的低效率，在他的领导下湖南、工团将走向何方呢？"
  POLITICS_HNN_PENG_DEHUAI_TONG_YI_DESC:0 "彭德怀生于石潭镇的一户贫农家庭。虽然自家贫寒，但彭德怀常常入迷于爷爷讲述“打富济贫”、“无处不均匀”的太平天国理想。起初，彭德怀曾读过两年传统儒家学堂，但因家境衰败，他不得不退学乞食养家。在家中众多亲人（包括彭母）因贫辞世后，彭德怀开始下煤窑谋生计，在煤窑的日子里他曾和劳工们一起罢工抗议薪资不公而遭到通缉，被迫离家出走。彭德怀的军旅生涯始于汤芗铭部。他作战勇敢，闻名全军，因此平步青云。在参加了将张敬尧驱逐出湖南的战斗后，彭德怀又协助救贫会打死了当地的一个恶霸地主。1923年，他从湖南陆军讲武堂毕业，取名德怀。1926年，彭德怀成为唐生智所部第八军第一师师长后，他把救贫会章程作为士兵委员会的章程。\n\n国民革命军溃败后，第八军受到各方面的威胁，唐生智率部撤入江西，对赵恒惕部退避三舍。闽赣根据地时期，彭在第八军中快速崛起，成为唐生智的得力干将。而且，彭德怀还与贺龙结下深厚友谊，他们都出身农民，憎恶地主恶霸，而且都对农业社会主义情有独钟。彭德怀在闽赣根据地任职将近十年，他踌躇满志，誓要打破帝国主义对中华大地的枷锁，建立一个人人自由平等的新中国。\n在他的带领下，湖南的工团党们完成了前人所未能完成的任务，他们统一了中国，他们将全中国人民从封建主义、帝国主义的压迫中解放了出来。而与此同时，对文官政府早已心生厌倦的他拒绝了所谓的大选，党内如今裂隙四起，又怎么能搞出这种激化斗争的事情呢？他将继续坐在主席的位置，拼尽他的全力去守护这个无产阶级国度。"
  HNN_He_Su_Heng: "何叔衡"
