--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1136,7 +1136,9 @@
  POLITICS_HNN_Xi_Zhongxun_DESC:0 "习仲勋，字相近。习仲勋生于陕西省富平县淡村习家庄的一个农民家庭。1926年，13岁时加入了中国社会主义青年团。1927年1月，在富平县立第一高小读书，因组织学生反对传统的旧式教育制度，年底被迫休学。1928年1月，在三原县第三师范读书。1928年春参加学生运动，被捕后在狱中正式加入中国工团党。1932年3月，习仲勋与吕剑人、李特生、许天洁等等组织发动了“两当兵变”，在西北第一次发动工团主义暴动，随后习仲勋组织这支部队在陕甘宁组建了陕甘边革命根据地，后在陕北红军领袖刘志丹的撮合下与高岗等人组建的陕北根据地合并为陕甘革命根据地。他们并长期与马家军、阎锡山、恩琴等势力打游击战取得不小战果。是工团党除湖南三省边界根据地外全国第二大根据地。"
  POLITICS_HNN_LIU_SHAO_QI_DESC:0 "刘少奇出生于一个与江西有所联系的富裕湖南家庭，他因而有幸出国留学。1920年，他被一些革命前辈招募加入中国工团党，而他在法公社的经历亦使他大开眼界。他在1921年正式加入新成立的中国工团党，并于1922年回国协助组织了江西与湖南地区的多次罢工。他还结识了李立三，成为中国工团党中崭露头角的成员。\n\n对国民党和工团党而言，北伐时期的日子困难无比。当时，刘少奇被迫转入地下，而后在闽赣起义中担任下级官员。尽管他被认为是位支持陈独秀-李立三路线的中国工团党正统派成员，但他在闽赣建立的关系可能被证明是同盟会试图将其运动扩展到城市无产阶级基础之外的关键。\n\n刘少奇之后被任命为中国工团党福建省委书记，以在国民革命政府的土地运动中心里赢得朋友。他的文笔很好，他发表过一系列的文章，包括一篇颂扬群众运动的文章，认为革命应当为群众争取自由，赢得他们的信任，并采取民主的工作和组织方法。他要求工团党干部和领导人遵守纪律，发扬民主，在组织上保持公开透明，以保证领导形式的民主。此外，他还要求实行土地改革。"
  POLITICS_HNN_GAO_GANG_DESC:0 "高岗出身一个贫苦农民家庭。13岁到米脂县龙镇小学读书。1922年，考入横山县立第一高等小学堂学习。1925年春，与一高学生曹动之、石作琦、王东皋、王怀信等人组织了“一高”学潮，结识刘志丹。1925年秋，进入榆林中学学习。1926年，经胡立亭、史巍然介绍加入中国工团党。1927年2月，进入冯玉祥国民军的西北中山军事学校学习。6月，因开展革命活动被发觉，在组织安排下，离开中山军事学校回到了横山县。\n\n由于大革命的失败，1927年秋，其与当地党组织在响水堡等地举办了农民运动通俗讲习所，成立农民协会，建立根据地，领导农民开展抗租和抗捐斗争。1928年春，陕北地区遭受特大旱灾，高岗、刘志丹、崔田夫等人发动农工暴动，成功在陕北组建了革命根据地，后与习仲勋等人的陕甘边革命根据地合并为陕甘革命根据地。他们并长期与马家军、阎锡山、恩琴等势力打游击战取得不小战果。是工团党除湖南三省根据地外全国第二大根据地。\n\n由于其武装出身，导致高岗天然和工团党内的军队势力来往密切，而看不起如组织工人运动的刘少奇、组织情报工作的周恩来等人，认为他们只是花架子，对革命并不忠诚。"
+ HNN_Chen_Yun: "陈云"
  POLITICS_HNN_CHEN_YUN_DESC:0 "陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。\n\n他有着党内其他人所没有的经济头脑，他不同于市场派那样直接投入反革命的怀抱，也不像某些人那般要求全面的计划经济，他会平衡好双方，走一条独属于中国的特色社会主义经济路线。"
+ POLITICS_HNN_Chen_Yun_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年6月13日，大清帝国 江苏省 青浦县§!\n§Y军旅生涯：§!§g陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。"
  Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族。、，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
  Guo_Mo_DESC:0 "郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。"
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。"
@@ -1163,8 +1165,7 @@
  POLITICS_HNN_LONG_CHAO_QING_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1906年，大清帝国 湖北省 黄梅县§!\n§Y军旅生涯：§!§g宛希先"
  HNN_Hua_Guofeng: "华国锋"
  POLITICS_HNN_Hua_Guofeng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1921年2月16日，中华民国 山西省 交城县§!\n§Y军旅生涯：§!§g华国锋"
- HNN_Chen_Yun: "陈云"
- POLITICS_HNN_Chen_Yun_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年6月13日，大清帝国 江苏省 青浦县§!\n§Y军旅生涯：§!§g陈云"
+ HNN_Xu_Si_You: "许世友"
  HNN_wang_gan_chang: "王淦昌"
  HNN_zhao_jiu_zhang: "赵九章"
  HNN_guo_yong_huai: "郭永怀"
