--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1167,6 +1167,7 @@
  HNN_Hua_Guofeng: "华国锋"
  POLITICS_HNN_Hua_Guofeng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1921年2月16日，中华民国 山西省 交城县§!\n§Y军旅生涯：§!§g华国锋"
  HNN_Xu_Si_You: "许世友"
+ HNN_geng_biao: "耿飚"
  HNN_wang_gan_chang: "王淦昌"
  HNN_zhao_jiu_zhang: "赵九章"
  HNN_guo_yong_huai: "郭永怀"
