--- a/localisation/KR_Fengtian_l_simp_chinese.yml
+++ b/localisation/KR_Fengtian_l_simp_chinese.yml
@@ -2997,6 +2997,9 @@
  fngmil.33.b: "我们的士兵数量已无人能及，只是需要善加利用"
  fngmil.33.c: "未来的空战和陆战是不可分割的，我们的作战方式应该反映这一点"
  fngmil.33.e: "加强道德灌输，心灵如龙体格如虎，我们的将士谁人能挡"
+ FNG: "东北"
+ FNG_ADJ: "东北"
+ FNG_DEF: "东北"
  FNG_empire_totalist: "中华帝国"
  FNG_empire_totalist_ADJ: "中国"
  FNG_empire_totalist_DEF: "中华帝国"
