--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -92,6 +92,9 @@
  MON:0 "蒙古"
  MON_ADJ:0 "蒙古"
  MON_DEF:0 "蒙古"
+ XSM:0 "青海"
+ XSM_ADJ:0 "青海"
+ XSM_DEF:0 "青海"
  TIB:0 "西藏"
  TIB_ADJ:0 "西藏"
  TIB_DEF:0 "西藏"
