--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -133,6 +133,7 @@
  HNN_Geng_Biao_for:0 "耿飚"
  HNN_tang_xiangming_hog:0 "汤芗铭"
  HNN_shi_ding_wu_hog:0 "石顶武"
+ HNN_shi_tai_xu_hog:0 "太虚法师"
  HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
  HNN_Mao_Ze_Dong_eco:0 "毛泽东"
  HNN_Shang_Kun_sec:0 "杨尚昆"
@@ -140,6 +141,7 @@
  HNN_Li_Xian_Nian_eco:0 "李先念"
  HNN_Li_Fu_Chun_eco:0 "李富春"
  HNN_hua_luo_geng_eco:0 "华罗庚"
+ HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_tang_xiangming:0 "汤芗铭"
  HNN_chen_quzhen:0 "陈渠珍"
  HNN_tian_yingzhao:0 "田应诏"
@@ -4600,6 +4602,9 @@
  HNN_FJZ:0 "摩诃至那国"
  HNN_FJZ_DEF:0 "摩诃至那国"
  HNN_FJZ_ADJ:0 "摩诃至那国"
+ HNN_BDF:0 "摩诃至那国"
+ HNN_BDF_DEF:0 "摩诃至那国"
+ HNN_BDF_ADJ:0 "摩诃至那国"
  HNN_FJD:0 "南赡部洲联邦"
  HNN_FJD_DEF:0 "南赡部洲联邦"
  HNN_FJD_ADJ:0 "南赡部洲联邦"
@@ -4681,6 +4686,7 @@
  HNN_jing_shen_si_jie:0 "人体奥秘"
  HNN_guo_jia_she_hui_jing_ji:0 "国社经济"
  HNN_fo_revolution_idea:0 "佛法革命"
+ HNN_deng_ji_zhi_idea2:0 "新式佛学院"
 
  HNN_Buddhism:0 "佛光普照"
  HNN_Buddhism_desc:0 "如今顾净缘终于驱逐了那个披着佛教的皮的伪信徒汤芗铭了，真正的佛教信仰将要普照整个湖南。但是在这条传播真理的路上还有着许多的敌人需要佛教徒们去解决，但是相信对于他们而言都只是时间问题。"
@@ -4755,8 +4761,17 @@
  HNN_fo_Xue_ji_hui_xue:0 "佛学即慧学"
  HNN_fo_Xue_ji_hui_xue_desc:0 "真理就是佛陀圆满觉知后证得的宇宙万物存在的真相，而此真相就是佛法，即真理就是佛陀所得的无上正觉。佛学依照戒定慧证得无上正觉即智慧的过程，其中最关键的就是慧学。慧学分为闻所成慧、思所成慧、修所成慧三个不同阶段。第一阶段是闻所智慧，即是由听闻佛法所得的智慧。第二阶段是思所成慧，即听闻佛法后思索考究产生的智慧。第三阶段是修所成慧，在上述两个阶段的基础上，使修佛的心意澄净，进入禅定的状态，心达到安定，则修成智慧。但这都是有漏的智慧，而无漏的智慧即圆满的智慧。如何达到无漏的智慧，太虚认为在闻所成慧、思所成慧、修所成慧的基础上，知晓一切法的根本是无相无分别的，形成无分别慧，最终引起无相无分别慧。"
 
+ HNN_yuan_bo_fo_fa:0 "远播佛法"
+ HNN_yuan_bo_fo_fa_desc:0 "为了救赎世界，我们需要将佛法播撒出去，使智慧之光普照人间，使慈悲之心滋养众生。世间苦厄无尽，众生沉沦于贪嗔痴的煎熬之中，若无正法指引，便如漂泊于苦海之舟，永不得岸。唯有佛法，能破除迷障，照亮前行之路，使众生觉悟因果，止息争斗，生起慈悲与智慧。"
+ HNN_chong_hui_zang_qu:0 "重回藏区"
+ HNN_chong_hui_zang_qu_desc:0 "西藏，这片广袤而神圣的高原，承载着佛法千年的光辉，亦是汉传佛法的重要起源之一。在历史的长河中，佛法自印度传入雪域高原，经由历代高僧大德的弘扬，最终汇流入中原，与中华文化相融共生，形成了博大精深的汉传佛教。然而，随着岁月流转，世事变迁，我们渐渐遗忘了这段深远的渊源，忽略了西藏作为佛法源流之一的庄严地位。\n\n如今，当我们在尘世浮沉、寻求佛法真谛时，更应忆起佛教最初的发源地，回望那片孕育智慧与慈悲的圣土。寻祖归乡，并非简单的地理回溯，而是心灵的归依，是对本源的探寻，是对佛法初心的回归。我们当以恭敬之心，重新追溯佛法的根脉，走入这片灵性之地，感悟先贤遗泽，承续那份超越时空、超越民族的佛法智慧。\n\n让我们怀抱敬仰之心，踏上归源之路，在雪域高原的圣光之下，感悟佛法的纯净无染，让心灵回归本真，让法脉源远流长，使佛陀的智慧再次普照人间！"
+ HNN_xi_na_ri_ben:0 "吸纳日传佛教"
+ HNN_xi_na_ri_ben_desc:0 "作为汉传佛教的分支，我们理应与日传佛教再合并，使法脉归一，使佛法更加兴盛。自佛法东传以来，汉地与日本同沐佛光，法缘深厚。隋唐之际，高僧鉴真东渡，将戒律、教义、经籍带至东瀛，奠定了日传佛教的根基，使两地佛法同承一脉，交相辉映。然因时局变迁，文化异化，汉传与日传佛教逐渐分道，各自发展，虽同根而异流，然本质皆奉佛陀教义，修慈悲智慧，求众生解脱。\n\n今时今日，世界变幻无常，众生苦难深重，佛法若各自为政，势必削弱其弘扬之力。若能再度合并，彼此互学互鉴，共同探讨修行之道，必能促使佛法更契合时代，使众生更得其益。汉传佛教博大精深，禅净双修，儒释道相融；日传佛教精研戒律，重视实践，融合神道精神。二者若能相辅相成，则可互补所长，共同精进，使佛法适应现代社会，助更多众生离苦得乐。"
+ HNN_su_ben_zu_yuan:0 "佛法的源头"
+ HNN_su_ben_zu_yuan_desc:0 "印度，万法之源，佛陀之乡，自古以来便是智慧的摇篮，孕育了无数觉悟圣贤，亦是佛法诞生之圣地。然而，时光流转，世事无常，今日的印度早已不复往昔的清净庄严，取而代之的是纷争不断，动荡不安。世俗权力的交替，信仰的冲突，贫富的悬殊，使这片承载佛陀慈悲与智慧的土地蒙上了尘埃，使昔日的光辉湮没在现实的苦痛之中。\n\n然而，是时候了！佛陀的圣地不应永陷于纷乱之中，秩序当重建，和平当归来。佛法教导我们，众生皆可度化，业障皆可清除，只要正法长存，善愿不灭，一切纷争皆可化解，一切苦厄皆可平息。我们当以佛陀的精神为指引，以慈悲为怀，以智慧为灯，促使印度重回光明之道，使这片土地再次成为觉悟的中心，而非纷争的战场。\n\n让我们携手共愿，结束这片土地上的动荡，使人心回归平和，使法脉再度兴盛，使佛陀之乡重现昔日的庄严清净，让天下安宁，众生得度！"
+
  hunfo.1.t:0 "不争的事实"
- hunfo.1.d:0 "在人生最灰暗的时候，汤芗铭接触到了佛教，此后，他便一发不可收拾的对佛经感到入迷。在闲暇之余，他不会像其他军阀那样留恋花柳乡之中，而独自在书房中研究佛经，翻译典籍。也因此他被其他同僚称为佛教居士\n\n而如今，他在湖南这个佛教禅宗的重要发祥地再一次站稳了脚跟，这个古老的宗教在湖南省有着广大的基础，无论是他，还是他的老对头赵恒惕、唐生智，他们都是，起码自称自己是佛教徒。但是，现在他终于登顶湖南省最高权力后，他不得不考虑一个问题：佛教在湖南乃至中国的未来中到底要占据多少份额？\n\n最大的威胁还来自我们的民间，自两宋开始，广为流传的佛教主要以民间净土宗为主，而它的另一个名字或许更为大众知晓——白莲教。而今则又改头换面以一贯道、三期普渡等等东西显于世人。这些我们对佛教的扶持很可能通过某种方式变成对这些邪教徒的扶持。"
+ hunfo.1.d:0 "在人生最灰暗的时候，汤芗铭接触到了佛教，此后，他便一发不可收拾的对佛经感到入迷。在闲暇之余，他不会像其他军阀那样留恋花柳乡之中，而独自在书房中研究佛经，翻译典籍。也因此他被其他同僚称为佛教居士。\n\n而如今，他在湖南这个佛教禅宗的重要发祥地再一次站稳了脚跟，这个古老的宗教在湖南省有着广大的基础，无论是他，还是他的老对头赵恒惕、唐生智，他们都是，起码自称自己是佛教徒。但是，现在他终于登顶湖南省最高权力后，他不得不考虑一个问题：佛教在湖南乃至中国的未来中到底要占据多少份额？\n\n最大的威胁还来自我们的民间，自两宋开始，广为流传的佛教主要以民间净土宗为主，而它的另一个名字或许更为大众知晓——白莲教。而今则又改头换面以一贯道、三期普渡等等东西显于世人。这些我们对佛教的扶持很可能通过某种方式变成对这些邪教徒的扶持。"
  hunfo.1.a:0 "维持原状才是最好的选择"
  hunfo.1.b:0 "无妨，我们将展开更多的合作"
  hunfo.2.t:0 "大师前来"
@@ -4803,6 +4818,21 @@
  hunfo.21.t:0 "广颂佛法"
  hunfo.21.d:0 "诸位善信，同道大德：\n\n今日相聚，皆因佛法之缘。佛陀教诲千年，非独存于寺院之中，亦非只为山林清修之人所持。佛法之要义，不仅在于解脱自身之苦，更在于济世利人、化导众生，使天下同归于光明觉悟之道。\n\n昔日，佛陀于菩提树下悟道，所见者，众生沉沦于贪嗔痴，轮回于生死海。然佛陀不以己证涅槃而止步，而是四十五年行化，游历人间，普度众生。今日之佛教，若仅存于寺院诵经礼佛，而不入人间利益大众，则岂不背离佛陀本怀？故我常言：“仰止唯佛陀，完成在人格。人成即佛成，是名真现实。”佛法非遥不可及，若能于世间修行，于生活中践行戒定慧，则家可安，国可治，天下可宁。\n\n然今世之人，多陷迷信，以为佛法唯在供养神像，拜求福报，不知修五戒、行十善，方是佛法真义；亦有人以为佛门当绝尘世，不理国事，然须知佛法存世，必当依国土而立，国危则法衰，民困则教微。是以，今日之佛教，宜当革故鼎新，出寺院之门，入社会之中，使佛法不独为僧侣所持，而能化育万民，使人人皆知佛理，人人皆行正法。\n\n因此，我等当从自身做起，戒贪嗔，修慈悲，诸恶莫作，众善奉行；更当兴办佛学教育，培育高僧，以法济世；广行布施，救贫济困，使佛陀慈光普照人间。如此，佛法方能不衰，佛道方能久住世间。\n\n愿诸位同道共勉，以佛心待人，以佛行立世，使佛法流传千古，使人间成就净土！"
  hunfo.21.a:0 "南无本师释迦牟尼佛！"
+ hunfo.22.t:0 "博爱世人"
+ hunfo.22.d:0 "诸位大德，善信同仁：\n\n佛法之根本，在于慈悲。慈者，予人安乐；悲者，拔人苦厄。世人常问，何为真正的佛教精神？我言，佛教即是博爱，爱一切众生，超越国界、种族、信仰之别，以慈悲济世，以智慧渡人，使天下众生皆得光明觉悟。\n\n佛陀在世时，不分贵贱，平等度化。憍陈如是婆罗门，须达长者是富商，阿育王是帝王，周梨频陀是贱民，佛陀视之皆同，无有高下，皆可入道，皆堪成佛。由此可知，博爱之精神，不应局限于亲友，不应局限于一族一地，而应如虚空无尽，遍洒众生。今日世道纷乱，国界林立，宗派争执，若各怀门户之见，以己信为尊，以他道为邪，视异己者为仇寇，则人间永无和平，众生皆陷苦海。佛门弟子，当怀包容，存大悲心，不计异同，不生憎恨，以真诚相待，以慈爱济人，方能展现佛陀精神，使世界安稳，使众生得度。\n\n然博爱世人，非徒口头之言，更在践行。世有饥寒者，当施食衣以济之；世有病苦者，当施药方以疗之；世有迷惘者，当施佛法以渡之；世有怨憎者，当施宽恕以化之。若能如是，则世间之隔阂可消，人心之纷争可平，天下可成佛国，众生可入净土。\n\n是故，我等佛子，当发广大菩提心，以佛陀之大爱济世，视众生如同己出，不问贫富，不论贵贱，平等相待，慈悲相助。如此，则佛法长存，人间即净土，世间无有苦厄，众生皆得光明。\n\n愿诸位共勉！愿天下大同，慈悲遍洒十方！"
+ hunfo.22.a:0 "南无本师释迦牟尼佛！"
+ hunfo.23.t:0 "以科学格义佛学"
+ hunfo.23.d:0 "诸位大德，诸位同仁：\n\n今日世间风云变幻，科学昌明，知识日新。然人心浮躁，信仰渐微，佛法若不随时代而自新，恐难以契理契机，续佛慧命。故我今日所言者，乃“以科学格义佛学”之道，愿与诸位共勉。\n\n佛法之真理，非随时而变，然佛法之弘传，必与时俱进。古人讲经论道，多依世俗典籍，以儒道释并融之法，阐释佛义，谓之“格义”；今之佛学，亦当借助科学之光，以现代语言重释古圣智慧，使世人易解易行。昔日，佛陀观因缘生灭，得缘起之理，此与今日科学所言因果律、生态系统之互摄不谋而合；佛经云“十方世界，尘刹无量”，今之天文学家观测星河，无限宇宙，亦与之相契；佛法所明“阿赖耶识”藏识不灭，今之心理学亦探讨潜意识、记忆传承，其理相通。由此可知，佛法本与科学并行不悖，乃解悟世界之至理。\n\n然今日之弊，或执科学而轻佛法，或守佛法而拒科学，皆非正见。若执迷于世俗科学，而不知科学之外，尚有更高智慧，乃为狭隘；若固守古义，不察新知，乃与世脱节，岂能化导众生？故吾等当以科学作舟，以佛法作帆，二者并行，方能济度今人，使佛法不衰，使信仰不灭。\n\n是故，我等佛子，当以科学助佛法，以佛法照科学，使二者相融互益，化解世间迷信，使佛理明白于众，使信仰符合时代，使佛教成为普度众生、契合世界之真实之道。如此，则佛法恒久住世，慧光永照人间！\n\n愿诸位共勉，愿法运昌隆！"
+ hunfo.23.a:0 "南无本师释迦牟尼佛！"
+ hunfo.24.t:0 "法性即是理性"
+ hunfo.24.d:0 "诸位大德，诸位同修：\n\n佛法者，通达宇宙之真理，契合人心之本性，绝非虚妄之言，亦非空谈神秘，而是超越世俗分别，融贯万象真理之大道。世人常言，理性乃治世之本，而我今要言，法性即是理性，佛法之理，正是宇宙人生之至理，超越时空，圆融无碍。\n\n何谓法性？即万法之本体，万物之真实。缘起之法，生灭不定，而法性不变；世事浮沉，世理迁移，而真如常住。此与人间之理性何异？理性者，正是抛却妄想执着，洞察因果，依正道而行，使心智明彻，使行为合乎至善。凡一切有情众生，若能明白此理，依缘而起正见，去偏执，除愚妄，便能于世间行正道，于人间建安和。\n\n今人言科学、言哲学，皆求于理性；然科学尚执形质，哲学或陷名相，而佛法所明之法性，超越形色，不滞于语言，乃彻悟宇宙根本之真理。是以佛法非盲信，非愚迷，非神秘之学，乃以最清净之智慧，探究世间一切现象之因缘，发见人生一切烦恼之本因，指引众生破除无明，证得究竟觉悟。\n\n是故，佛法不与理性相悖，反与至理契合。若人能依理性而修法性，依法性而明理性，则其见解不惑，行持正直，心境清明，圆满人生。而我辈弘法者，当以理性说法，使世人知佛法之真实，不落迷信，不执虚妄，乃能使佛法光辉普照，使众生得解脱智慧之乐。\n\n愿诸位共修法性，依理而行，以慧光照破愚暗，使人间成净土，众生共成佛道！"
+ hunfo.24.a:0 "南无本师释迦牟尼佛！"
+ hunfo.25.t:0 "佛学即慧学"
+ hunfo.25.d:0 "诸位大德，诸位同仁：\n\n佛法者，非神秘之术，非盲信之教，乃开启智慧、透彻人生、照破无明之学。佛陀四十九年说法，三藏十二部经论，无非教人离愚入智、破迷开悟，使众生由无明黑暗而入光明觉照。故我今日所言者，乃“佛学即慧学”——佛法之根本，在于开发智慧，成就觉悟，令人人得以明理、正见、自在而行。\n\n何谓慧？慧者，明理也。世人贪恋世俗之学，求算术、学工艺、习政法，然若无大智慧引导，则纵使学贯古今，亦难免陷入迷途。唯有慧学，能究万法本源，知因果通达，解生死大事，使人不为名利所困，不为苦厄所缚，而能自度度人，自觉觉他。\n\n佛陀成道，所证者即大智慧。佛法之三学——戒、定、慧，最终皆归于慧。戒为护持身心之法，定为安住心念之道，而慧乃破无明、见实相之根本。若仅持戒而无慧，则落于拘泥；若修定而无慧，则沉于空寂。唯有智慧，方能知行合一，内外兼修，使佛学成为人生正道，而非空谈名相之学。\n\n今世之人，多言科学、哲学，以求明理；然科学所探者现象，哲学所究者概念，而佛学所明者，则为宇宙人生之根本法则，是究竟之慧学。若人能以佛法为慧学，以慧学为人生之导，则其言行不妄，取舍有道，行住坐卧皆契正觉，处世为人皆归中道。\n\n是故，佛学者，智慧之学，光明之道，乃人类文明之至宝。愿诸位共修慧学，以佛法明智，以智慧立身，以正见处世，使众生皆得清净自在，使世间化作光明国度！"
+ hunfo.25.a:0 "南无本师释迦牟尼佛！"
+ hunfo.26.t:0 "佛法远播"
+ hunfo.26.d:0 "诸位大德，诸位同修：\n\n佛法者，觉悟之道，慈悲之行，普度众生之法门，岂能局限一地，独照一隅？佛陀涅槃前曾言：“应广宣妙法，使群生悉知。”此乃吾辈佛子之责任，亦是佛法久住世间之根本。今世界动荡，物欲横流，人心困于贪嗔痴，沉溺于生死轮回，若无正法指引，众生何以解脱？是故，我等当奋起精进，使佛法远播寰宇，让觉悟之光普照世界！\n\n回顾往昔，佛法自印度东来，入雪域，进中土，传扶桑，历经千年，化育群生。今者，科技日进，交通发达，国界虽存而世界已近，佛子更当顺应此势，乘愿弘法，使正法之声响彻五洲，使四海众生皆得法益。然弘法非徒口宣，亦需身行，吾等应以身示道，持戒精严，修慈行善，使人观吾之行，闻吾之言，生信向道，乃能令佛法得以弘扬，而非仅存于书卷塔庙之间。\n\n是故，我辈当立大愿，发大心，不仅于一国一地传法，而当胸怀寰宇，远播佛音。愿此正法，如灯燃灯，生生不息，愿天下众生，因闻佛法，破迷开悟，超凡入圣，使娑婆世界，终成清净庄严之净土！"
+ hunfo.26.a:0 "南无本师释迦牟尼佛！"
  
  hunfo.10.t:0 "一位奇异的高僧"
  hunfo.10.d:0 "在我们收复了上海之后，我们的士兵在那里遇到了一个奇怪的家伙。\n\n那是上海的一座不大不小的寺庙，里面的僧侣却不是中国人，甚至不是日本人或者印度人，他们皮肤白皙，眼睛泛蓝。一看就知道是一伙欧洲人。但他们拒绝与我们的普通士兵交谈，那个为首者表示这些普通士兵修行不够，为了知道更多信息，正明法师决定亲自前往与他们交谈。终于得知，为首者法名释照空，原名伊格纳茨·特雷比奇-林肯，是一名匈牙利人，在欧洲时误信了一些基督教和犹太教，在这些邪教的诱导下他在匈牙利犯了事流亡各地，在西方的那些邪恶政府的诱导下做了许多坏事也认识了许多政府高层。最终出于各种原因他来到了中国，这个最伟大的东方民族的伟大国度，并在这里他受到了佛祖的感召，最终剃度，皈依正信。\n\n在听完了他的这番论述后，正明法师第一时间联系了各大高僧，这样一位与西方有着密切接触，而且如今也有传闻他在接受西方某些组织的资助的匈牙利佛教徒。也许他能够为我们与西方人的交流搭起一道桥梁？我们是不是可以承认这座寺庙的地位并给予他些许职务？"
