--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -694,6 +694,8 @@
  LEC_he_fu_eco: "何福"
  LEC_Robert_Hotung_hog: "何东"
 
+ SHC_robbie_hoshailai: "何世礼"
+
  HE_DONG_DESC:0 "何东爵士，本名启东，字晓生，1862年12月22日生于香港。何东初受教于传统汉文私塾，于1873年入中央书院接受西式教育。1878年，何东以优异成绩毕业离校，任职于广东海关。两年后，转入渣甸洋行任华人部初级助理员。何东表现突出，一年后获提升为买办，逐步接管洋行旗下众多重要企业。1881年向海关辞职加入香港怡和洋行华人部任职初级助理员专责翻译，因表现突出而获迅速提升为买办助理。在怡和任职仅两年的1883年接替姐夫蔡昇南成为买办，不久更获委任为刚成立的“香港火烛保险公司”及“广东保险公司”的总买办。在任职买办的同时，何东自资成立“何东公司”（Ho Tung & Company）从事食糖的买卖，而胞弟何福及何甘棠亦加入怡和成为买办。1894年何东接任吴炳垣成为怡和洋行华总经理，于1900年以健康欠佳为由辞职，由其弟何福接任。1906年何东向香港总督会同行政局申请获准在中环半山居住，成为自香港成为英国殖民地后，首位在太平山山顶居住的拥有中国血统的人士。此后何东一面从商，一面从政，在赚钱之余也在中国各军阀间长袖善舞，既和国民党保持着良好关系，又和奉系军阀偶有来往..."
  Sha_Xun_DESC:0 "维克多·沙逊爵士，第三代从男爵，是英籍犹太富商沙逊家族的第四代，商人及酒店经营者，塞法迪犹太人，来自富有的巴格达犹太人沙逊家族商人和银行家族。维克托爵士在第一次世界大战期间曾在皇家飞行队服役。他在1916年的一次飞机失事中幸存下来，但腿部受伤，这让他终生受苦。1924年，他的父亲去世，维克托继承了他的头衔，成为孟买第三代从男爵。他移居印度，在那里管理家族的纺织厂，并在印度立法议会任职。20世纪二三十年代，沙逊将大量财富从印度转移到中国上海，向当地经济投资了数百万美元，推动了上海的房地产繁荣。沙逊爵士经常在世界各地出差或旅游，他将时间分配在浦那、印度和上海两地。他收购了华懋地产公司、华懋酒店公司和至少50家其他公司。1929年，沙逊建造了华懋酒店以及其他大型酒店、办公楼和住宅，其中很多位于上海市中心的滨水区外滩(包括汉密尔顿大厦、新都城酒店和河堤)。他一度在外滩拥有1,800多处房产。是上海滩最富有的人。"
 
