--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -108,6 +108,8 @@
  MON_ilkhanate_four: "重建大汗国"
  MON_ilkhanate_four_desc:0 "和前人一样，我们也可以考虑在波斯建立一个附属国，他们可以更好地利用当地领土，减轻我们肩上繁重的行政负担。"
 
+ master_of_ordnance: "炮兵大师"
+ master_of_ordnance_desc: "§L大炮从来不嫌多。§!"
  RUS_ice_march_trait: "白军传承"
  RUS_ice_march_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同布党红色分子浴血奋战。如果哪一天俄罗斯大地上再次出现社会主义，那么他必将起身与之抗争。§!"
  SQI_yue_dui: "姆吉卡"
