--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -144,12 +144,12 @@
  QIE_reorganize_divisions_desc:0 "任何一个有点脑子的军阀都保有自己的私兵来控制他统治的领土。不幸的是，这些部队的质量层次不齐，从半专业部队到那些比起保卫更懂得洗劫的暴民一应俱全。通过投入大量资源来标准化和现代化这些部队，我们可以让他们在战场上发挥出应有的价值。"
  QIE_zhili_flood_dams:0 "准备溃坝"
  QIE_zhili_flood_dams_desc:0 "直系战略家们制定了一个令人震惊的计划——破坏黄河沿岸的大坝。这势必将会导致洪水泛滥，并阻止任何敌人的前进。但是，造成平民伤亡和经济损失的代价也将是巨大的。"
- QIE_studywars:0 "老方法，新设计"
- QIE_studywars_desc:0 "在欧洲将军们尝试“装甲战争”和其他前沿思想的同时，我们的战略家从过去的十年内战中吸取了教训——大炮才是王道。通过对我们的旧火炮进行现代化改造，我们可以确保它们在战斗中为我们提供最佳火力支援。"
- QIE_work_with_manchu:0 "同满洲将领共事"
- QIE_work_with_manchu_desc:0 "尽管一些年轻的满洲将领确实是妄自尊大的贵族，但是像爱新觉罗·熙洽这样年长的军队元老就能为直系军队提供有价值的骑兵培训。同时，直系的将领也可以向年轻的满洲军官传授他们在过去数十年的倾轧和战争中学到的技能。"
- QIE_expand_peking_uni:0 "扩建京师大学堂"
- QIE_expand_peking_uni_desc:0 "京师大学堂的教育方向侧重于文学、艺术和文化这类社会科学内容，这些东西确实挺重要的，但是这些东西没法打赢战争。我们可以向京师大学堂调配资金以资助其在计算机、化学和无线电方面的研究并建立实验室，而这些都是能对我们的军队提供帮助的。"
+ QIE_studywars:0 "陆战之王"
+ QIE_studywars_desc:0 "也许欧美洋人会嘲笑这种主张，不过主宰中国兵器界的利器无疑是大炮。这是本土作战中最引人瞩目的装备，每一场成功的战役都离不开它大显神威。安国军、护国军、靖国军，他们都明白，而我们自然也明白。"
+ QIE_work_with_manchu:0 "英雄不问出处"
+ QIE_work_with_manchu_desc:0 "在对于直系主导中国的中央军一事上，也许最令人关注的就是部队对于吴佩孚及其直属参谋的绝对依赖。可正如王大帅所言，玉帅也没法长生不老。要真正建设一支配得上国家和人民的军队，我们就必须要让指挥体系多元化。"
+ QIE_expand_peking_uni:0 "科学现代，携手并肩"
+ QIE_expand_peking_uni_desc:0 "保定军校乃是中国最引以为傲的军事院校之一。比起后来的昆明军校（云南讲武堂）乃至黄埔军校，保定军校更为先进，其校园之内也可谓兼容并蓄。革命党人、军阀、北洋政客，甚至还有吴佩孚、曹锟这样的人，不一而足。出于对这个机构的珍视，也出于蒋百里的一再坚持，我们会让这所令人骄傲的学堂实现现代化，并分拨更多的资金。"
  QIE_zhili_mercs:0 "雇佣外国顾问"
  QIE_zhili_mercs_desc:0 "我们的反租界立场使我们无法从大多数欧洲政府那里获得军事援助，但是聘请个人、独立顾问则是讲究公平竞争。过去二十年持续的动荡和冲突使得那些凭自己的才能让雇主竞高价的人供不应求。"
  QIE_jiangbailiplan:0 "蒋百里的计划"
@@ -192,8 +192,8 @@
  QIE_leverage_new_pop_desc:0 "我们通过以前被认为是“军阀政府”无法实现的优势实现了对陈调元督理的干预性支持，这增强了政府的合法性。通过招募前新帝国宪政会的知识分子加入我们的政府，我们可以进一步使我们的政权合法化。"
  QIE_on_our_own:0 "自力更生"
  QIE_on_our_own_desc:0 "我们采取反租界立场使得德国撤回了他们的军事支持。不过，我们将调动我们自己的一切资源并激发人民的意志来进行自卫。"
- QIE_hire_republican_officers:0 "雇佣前共和派的军官"
- QIE_hire_republican_officers_desc:0 "前共和派的军官和士官对我们支持复辟的满清感到厌恶。不过随着满清被推翻以及我们现在所采取的反租界立场，也许我们现在能够将这些经验丰富的军官和士官重新招募回来。"
+ QIE_hire_republican_officers:0 "仿效玉帅"
+ QIE_hire_republican_officers_desc:0 "我们一次又一次见证了中国军人逆流而上、激流勇进的顽强精神。而其中最突出的例子就是吴佩孚大帅，他乃是中华民族无可争议的军中猛士、儒将英雄。如果每位战士都能效仿他的尚武精神，我们就能够立于不败之地。"
  QIE_open_up_to_investment:0 "简化外资进入的法案和条款"
  QIE_open_up_to_investment_desc:0 "尽管深受德国的影响，我们在关于外资投资上仍然是漏洞百出，保持着繁文缛节和严重的官僚习气。通过简化一系列法律和条款，我们应该能够吸引到其他的外国投资来建设我们的工业和军备。"
  QIE_harmonious_balance:0 "和谐平衡"
@@ -234,8 +234,8 @@
  QIE_grant_foreign_licenses_desc:0 "我们能够轻而易举的将工厂建好，但是我们需要的是好品质的德国工具和模具设备。如果我们采购足够多的机床和模具，我们应该能够使我们的工业腾飞并尽快追上西方国家的脚步。"
  QIE_seek_german_RR_capital:0 "雇佣德国的铁路工程师"
  QIE_seek_german_RR_capital_desc:0 "我们的铁路系统大多是由欧洲公司建造的。虽然有人会对我们继续使用他们的铁路感到愤怒，但是说到底他们才是掌握技术的人。我们应该聘请德国的铁路工程师来改善我们的基础设施。"
- QIE_krupp:0 "引进克虏伯的钢材"
- QIE_krupp_desc:0 "大多数国产钢在质量上都乏善可陈，而克虏伯却是国际质量的代名词。我们应该大量进口它们的钢材来建立我们的工业体系，而不是依靠劣质的国产钢材。"
+ QIE_import_krupp_steel:0 "引进克虏伯的钢材"
+ QIE_import_krupp_steel_desc:0 "大多数国产钢在质量上都乏善可陈，而克虏伯却是国际质量的代名词。我们应该大量进口它们的钢材来建立我们的工业体系，而不是依靠劣质的国产钢材。"
  QIE_siemens:0 "购买西门子的无线电设备"
  QIE_siemens_desc:0 "在中国这样的大国，无线电真的是能够确保我们的部队能够在战术和战略上协调一致的关键，西门子是德国无线电设备上的巨头，我们应该进口一些他们的设备来武装我们的部队。"
  QIE_IGfarben:0 "购买巴斯夫的合成专利"
@@ -561,6 +561,18 @@
  QIE_missionary_idea_desc:0 ""
  QIE_holy_meritocracy_idea:0 "圣贤"
  QIE_holy_meritocracy_idea_desc:0 ""
+ QIE_embers_of_a_new_beiyang:0 "新北洋的余火"
+ QIE_embers_of_a_new_beiyang_desc:0 "在海军总长萨镇冰的领导下，海军部获得了足以实现历史上最雄心勃勃现代化计划的经费。在世界各地局势加剧，倭奴也对我国海岸线虎视眈眈之时，萨镇冰召集了北洋水师大小军官来开展新的“六年造舰计划”。在一系列工作下，海军部期望能建设起一支不仅能代表中央政府，更是能代表整个中华民族的舰队。虽不大可能动摇日、美、德的海洋霸权，但北洋水师也会为其提振中华民族的爱国热情而再度倍感自豪。"
+ QIE_the_beiyang_navy:0 "北洋水师"
+ QIE_the_beiyang_navy_desc:0 "北洋水师最初由总理海军事务衙门会办、直隶总督、“中国的俾斯麦”李鸿章于1888年创建。水师曾号称世界第八、亚洲第一，却在中日甲午战争的首秀中就被毫不留情地歼灭了。1899年，水师由叶祖珪、萨镇冰重整，而1909年又由载洵再度整编，但其规模却自此一蹶不振。这与在中国占主导地位的军事强人们的忽视密不可分。而如今中央政府需要一支足以抵御日军侵略的防御力量，因此北洋水师将会在萨镇冰将军的督导下再次重生。"
+ QIE_baoding_military_academy:0 "保定军校"
+ QIE_baoding_military_academy_desc:0 "保定军校最初由直隶总督袁世凯创建，其悠久传奇的历史也在革命情绪与北方政治冷感的冲突之下黯然失色。该校于1902年由袁世凯与直系创始人冯国璋共同建立，由冯国璋出任首任总办（校长）。1902至1912年间，随着袁世凯扶摇直上，保定军校的校舍也在大规模扩张，成为了许多军事天才，却也是反袁思潮的重要摇篮。\n\n该校的课程设置着重于基础教育和纪律，开设战术、筑城、兵器、交通四项教程。保定军校效法德式、日式教育方法，以严格训练和高于同类学堂的技术成熟度而声名远扬。\n\n其培养出了曹锟、吴佩孚等一系列直系成员，可堪为中央政府军事之中流砥柱。而随着重大军事复兴工作的开展，毫无疑问保定军校也将培养一代又一代的军事人才。校训曰：“守信、守时、苦读、勤练、爱校、爱国。”"
+ QIE_foreign_advisory_training:0 "外国顾问的训导"
+ QIE_foreign_advisory_training_desc:0 "在那些于中国大都会中事业失意的流亡军事人员的帮助下，中央军正进行着战略战术的理论现代化。与此同时，海空两军将士也在加紧训练，力图构建一支真正的现代化中国舰队及空军。"
+ QIE_chinese_soldiers_german_weapons_idea:0 "中国士兵，德国武器"
+ QIE_chinese_soldiers_german_weapons_idea_desc:0 "繁荣联盟和中国精兵的摇篮利用着其在中国国内与德国军火界的关系，努力为政府与各大军火商签订合同铺平道路。"
+ QIE_national_aviation_programme: "国家航空计划"
+ QIE_national_aviation_programme_desc: "中国虽然在空战领域长期追赶西方列强，但是中央政府过去几年也只能部署出几架过时的战斗机，运气好的时候可能凑得出一个飞行中队。全国各地的军阀都在尝试自己的航空计划，因此政府也绝不愿因在战争的第三条道路上被那些地方的督理、军头们超越而蒙羞。为此，中央政府动用了中欧同盟中的人脉，让国内工厂得以迈向精简生产需求的道路。"
  QIE_integrating_province:0 "整合中的省份"
  QIE_integrating_province_desc:0 ""
  QIE_german_railroad_engineers_idea:0 "德国的铁路工程师"
@@ -976,6 +988,8 @@
  QIE_end_concessions_TT:0 "解锁£decision_icon_small §H决议§!以夺取§Y澳门§!、§Y青岛§!和§Y其他的外国租界§!，前提是上述地区仍未受控制。"
  QIE_improve_legitimacy_tt: "§G民众对我们政府的看法将会改善！§!"
  QIE_debt_default_tt: "§R我们得出了结论，一切外来帝国主义势力强加给中国的条约、曾具约束力的债务都将成为空文废纸。我们也拒不承认他们财报上的一切巨额亏空。然而，这些帝国主义分子怕是不会善罢甘休。§!"
+ QIE_consolidate_zhili_infantry_divisions: "§L直系军事人员将致力于把我们剩余的直系军阀步兵旅整合进新直系步兵师编制，这将为我们带来5支现代化师。§!"
+ QIE_gain_zhili_infantry_division_template: "创建1个§Y直隶步兵师§!部队编制。\n- §Y步兵营§!x10\n- §Y火炮支援连§!\n- §Y工兵连§!"
  breach_dams_TT:0 "解锁£decision_icon_small §H决议§!来§Y掘开黄河堤坝。§!如果你在和平时期完成了这个国策，你可以将平民转移离开危险地区，在某种程度上减轻洪水将会带来的负面效果。"
  civilians_relocated_TT:0 "当我们掘开大坝，政治点数花费和稳定度减益将会大大减少。"
  QIE_caokun_constitution_tt:0 "曹锟宪法将在短期内保证稳定，但长远来看势必会耗尽政治点数。"
