--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -22,8 +22,16 @@
  QIE_yiguandao_coup_party:0 "中华道德慈善会"
  QIE_yiguandao_coup_party_long:0 "中华道德慈善会(Zhonghua Daode Cishan Hui)\n§g中华道德慈善会是一贯道为了在中央政府面前表现出合法化而成立的“专职”组织。一贯道起源于19世纪的山东，最初其只是古早的民间秘密宗教“先天道”的下属堂口，而先天道是老官斋教的一个支流，老官斋教则是罗教的大乘派支流。一贯道由王觉一创立，王觉一逝世后，刘清虚接替了他的位置，并于1905年正式将教派命名为“一贯道”，取“吾道一以贯之”的含义。\n\n刘清虚将教派传给了路中一，1925年，路中一去世，神秘莫测的张天然成了他的接班人。一贯道在儒家思想陷入危机时趁势而起，在缺乏信仰的人群中蓬勃发展。传播他们对无生老母、道的信仰，以及混杂有救世论、佛教和儒家的哲学。§!"
 
- POLITICS_PUYI_PUPPET_DESC:0 "“皇帝陛下、天子、宣统皇帝”……尽管溥仪拥有各式各样的各类头衔，但是自他1906年出生以来就从未掌握过任何一点权力。在他5岁那年，辛亥革命将它赶下了皇位，而随后他又随着德国对中国内战的干预重登大极，这使得他不得民心。日常的治理政务由北京的政府负责而非皇帝本人，因此在过去的十年中，他所得做的便是闲坐在紫禁城里，通过打网球和练书法消磨日子。但是宣统皇帝心中仍暗藏着重现中国和他的王朝几个世纪前光辉的野心……"
- POLITICS_PUYI_RESTORED_DESC:0 "在宣统维新之后，爱新觉罗·溥仪扫清了军阀的影响力，重掌政府大权。尽管有些观察员担心传统主义会借此东风复兴，但大清的新政府似乎正努力建设现代化的治理体系。溥仪依旧未能独揽大权，但这正是他亲手设计的。由于害怕后代会重蹈历代先帝暴政覆辙，皇帝与他的立法顾问们已经构建了一种君主立宪制——溥仪作为精神与爱国层面的代表，仅在立法机关与日常治理中发挥顾问作用。这种体制虽前无古人，但在表面上看，新体制仍不失其强大稳固，许多中外人士也都希望溥仪能够带领这个国家勇闯美丽新世界。"
+ QIE_puppet_emperor: "傀儡皇帝"
+ QIE_restored_emperor: "复位皇帝"
+ QIE_restored_emperor2: "复位皇帝"
+ QIE_restored_emperor3: "复位皇帝"
+ QIE_son_of_heaven: "天子\n§g尽管那些反对者指责溥仪不过是个恰好碰上了好时代的傀儡。但通过复辟宪政的实践，溥仪已经证明了自己才是真正的天命所归。§!"
+
+ QIE_aisin_gioro_puyi: "溥仪"
+ QIE_aisin_gioro_puyi_leader_desc:0 "§Y生于：§!§L1906年2月7日；大清帝国、直隶省北京淳亲王府§!\n§Y背景：§!§L$QIE_aisin_gioro_puyi_desc_body$溥仪的统治并不得人心，他不过是一枚橡皮图章，一块强权之间讨价还价的筹码。§!\n\n§Y备注：人们认为溥仪残忍而暴虐，许多人将这种施虐癖归因于他在皇宫中没有得到良好培养。\n溥仪闲坐在紫禁城里，爱上了打网球和练书法。§!"
+ QIE_aisin_gioro_puyi_manchu_leader_desc:0 "§Y生于：§!§L1906年2月7日；大清帝国、直隶省北京淳亲王府§!\n§Y背景：§!§L$QIE_aisin_gioro_puyi_desc_body$\n\n在宣统维新后，新生的清廷选择以更为现代化的面貌示人。溥仪依旧实权有限，但这是精心设计的。他惧怕自己的后裔会如同他的先祖一般专制，进而令他的皇朝毁于一旦，故皇帝与他的立法顾问们构建了一种立宪君主体制——溥仪将成为精神与爱国层面的代表，并仅在立法院中担任咨询与日常管理之职。尽管这种新体制史无前例，但许多中外人士都都希望溥仪能为现代君主树立好榜样。§!"
+ QIE_aisin_gioro_puyi_desc_body:0 "大清国皇帝陛下、天子、宣统皇帝，尽管溥仪拥有各式各样的头衔，但这位年轻的皇帝自1906年出生以来就从未掌握过一丁点权力。小皇帝溥仪两岁即位，随后不到四年就被废黜。在退位后，溥仪暂居紫禁城，称“逊清小朝廷”。他照旧过着优渥的生活，与世隔绝、奢侈无度。\n\n由于约翰斯顿（中文名庄士敦）的影响，溥仪开始着迷于现代文化，他开始穿西服、剪辫子，并渴望离开紫禁城去探索世界，这让郑孝胥等人非常恼火。1922年溥仪结婚后，他继续过着相对奢侈的生活，直到1924年冯玉祥倒戈——冯玉祥罢免曹锟、迫使吴佩孚逃亡，并令鹿钟麟威逼溥仪迁出紫禁城。溥仪拒绝被赶出自己家，最后被国民军的士兵强行迁出，后逃往日本大使馆。\n\n溥仪移居天津租界后，曾与张作霖、段祺瑞、吴佩孚等人书信往来，甚至于1925年致书吴佩孚要求还宫紫禁城，未果。溥仪在天津受到优待，仍被外国人视为“皇帝”。1928年曹锟与德意志帝国谈判过后，溥仪最终第三次坐上了龙椅。"
  POLITICS_WU_PEIFU_DESC:0 "从溥仪、溥杰等一批试图推翻直系集团的满洲勋贵手中死里逃生后，吴佩孚扯下了徒有其表地掌控中国的帝制“外皮”。吴佩孚自封自己为“临时国家元首”，现在的任务是为国家建设一个合法的政府体系。作为一个戎马一生的军人，不出意料的话吴佩孚不会长期掌权，而是把大权交给自己钦定的接班人。"
  POLITICS_HU_SHIH_DESC:0 "作为一名哲学家和知识分子，让胡适担任“中华民国北京政府”的首任总统似乎是个怪异的选择。他提出的“实用主义”政治哲学在清政府复辟后几乎立刻便深深地影响了吴佩孚，这两位前共和派常常在北京大学胡适的办公室中促膝长谈，讨论应该如何献身帝制这一条对中国来说“最不坏”的路。然而，随着满洲勋贵暴君的阴谋被揭发，吴佩孚钦点了胡适来领导新政府，希望这位哲学家的著作与公众形象能为这个被大众视作直系集团皮囊的政府带来些许合法性。"
  POLITICS_WELLINGTON_KOO_DESC:0 "顾维钧是中国最重要的外交家和政治家之一。他曾在世界大战结束的谈判中获得了影响力。大清复辟期间，他担任驻美国大使。现在由于政治紧张局势升级，吴佩孚任命他担任中华民国北京政府的大总统，希望他的外交技巧能获得国际合法性和承认。"
@@ -106,6 +114,7 @@
  QIE_manchu:0 "大清帝国维新国策树"
  QIE_zhili:0 "大清帝国直系军阀国策树"
  Qing_Lie:0 "直隶陷入混乱国策树"
+
  QIE_yearofrat:0 "鼠年"
  QIE_yearofrat_desc:0 "随着1月24日，农历春节的临近，国会总裁曹锟和内阁总理大臣吴佩孚将军已经开始起草演讲以纪念他们二者在反贸易债务问题上达成一致的第四个年头。而这个问题也是中央政府的头号大敌，即便八省联合内部已经出现了动荡的征兆，直系军阀仍然急切得想要解决这个问题。"
  QIE_taxes1:0 "新税"
@@ -154,28 +163,32 @@
  QIE_zhili_mercs_desc:0 "我们的反租界立场使我们无法从大多数欧洲政府那里获得军事援助，但是聘请个人、独立顾问则是讲究公平竞争。过去二十年持续的动荡和冲突使得那些凭自己的才能让雇主竞高价的人供不应求。"
  QIE_jiangbailiplan:0 "蒋百里的计划"
  QIE_jiangbailiplan_desc:0 "蒋百里将军的计划侧重于静态防御工事和防御战术，并且将假想敌定为将会对海岸线发动进攻的日本海军。虽然有人批评他这是剽窃了其下属的想法，但这仍然是捍卫帝国主权的坚实计划。"
+ QIE_highlighting_our_goals:0 "强调目标"
+ QIE_highlighting_our_goals_desc:0 "蒋百里受护国战争启发，向玉帅献计，直系也可以采取类似护国军的政治鼓舞措施。通过阐明我们在战时的政治方针目标、明确为何而战的意图，将士们才能够在战斗中坚韧不拔、勇往直前。唤醒真正的中国猛士之精神，仅需不过几步。"
  QIE_hubeigenerals:0 "拉拢湖北将军团"
  QIE_hubeigenerals_desc:0 "“湖北将军团”是由湖北省籍的实业家和军人组成的非正式协会。蒋百里将军的密友——萧耀南将军是该省的督理，并慷慨地自愿利用他同工业界的人脉去帮助蒋氏计划修建所需的防御工事。"
- QIE_gongxianarsenal:0 "扩建巩县兵工厂"
- QIE_gongxianarsenal_desc:0 "巩县兵工厂在规模上仅次于更大的汉阳兵工厂。但是，通过扩大生产，我们可以充分改善我们的工业基础，以防其中一个兵工厂不幸在战争中落入敌手。"
- QIE_modern_contracts:0 "国防合约商的现代化合同"
- QIE_modern_contracts_desc:0 "以前，武器生产合同是临时签发的，而且各级腐败泛滥。通过发挥我们现有的政治影响力，我们可以对这些采购系统进行现代化和整理，使我们的军火工业采购水平达到西方标准。"
  QIE_fallout_of_northwest_conflict:0 "西北地区冲突的阴霾"
  QIE_fallout_of_northwest_conflict_desc:0 "尽管在我们即将进行的斗争中其重要性远不如沿海地区，但中国内陆仍然是称得上富庶的，我们必须为即将到来的冲突争取到那些亟待开采的资源。西北的战乱已经结束，无论战争何时才会结束，我们都应开始寻求最大程度的对这些资源的利用。"
- QIE_destroy_isolated_warlords:0 "消灭孤立的军阀们"
- QIE_destroy_isolated_warlords_desc:0 "我们始终致力于改善对奉天和日本的防御力量，但在我们周围有许多小而孤立的军阀，他们缺乏保护，我们应该消灭这些零散的地方政权，并将其直接纳入我们的领土。"
- QIE_rebuild_alliance:0 "重建直系的联盟"
- QIE_rebuild_alliance_desc:0 "在八省联合崩溃之前，我们是中国无可争议的主人。我们过去的盟友有些还没有抛弃我们，与他们取得联系，我们将建立抵抗日本和奉天叛军进犯的强大堡垒。"
+ QIE_destroy_federalists:0 "第二次南征"
+ QIE_destroy_federalists_desc:0 "“联省运动”是一帮地方主义军阀的产物，还被天真的知识分子所支持，实际上不过是加剧军阀混战的闹剧。1927年，我们被迫容忍陈炯明恢复广东省长职务，但此后，他和他的盟友一直在反抗我们。我们必须在“联省运动”继续荼毒更多地方之前，终结它带来的分裂和腐败，恢复中央政府在联省派地区的权力。"
+ QIE_cross_the_dai_river:0 "进军戴河"
+ QIE_cross_the_dai_river_desc:0 "第四次直奉战争中，我们进军东北受阻，多年过去，东北方向的战争威胁却愈演愈烈。张作霖和日本人做了交易，出卖了灵魂，也出卖了国家——我们要进行第五次直奉战争，纠正他犯下的大错。直系要从日本人手中保住东北，我们迄今为止的一切努力都是为此。机不可失，时不再来！"
+ QIE_destroy_kuomintang:0 "掐灭党国之火"
+ QIE_destroy_kuomintang_desc:0 "所谓“国民党”，乃孙文对朝廷怀恨在心而创立之政党，如今不过一团乱麻、残兵败将耳——“社会主义”盗匪、军阀罪犯，侈谈“革命”，行暴力掠夺之实。十余年前，民党北犯，大败而归，然其“革命之志”不移。虽其勇气着实可嘉，然我军将起兵南征，定要一举驱逐民党，捣毁其叛逆之巢穴。"
+ QIE_destroy_isolated_warlords:0 "恢复中央之国的秩序"
+ QIE_destroy_isolated_warlords_desc:0 "长期以来，中国一直被野心勃勃的强人们和心怀不轨的地方派系所分裂。形形色色的掠夺者都在趁人之危，剥削我土地、侵蚀我人民。结束百年国耻的下一步自然是结束军阀时代。我们必须让各色军阀乖乖就范，把那些利用八省崩溃来大行煽动之事的逆贼收回统治之下。"
  QIE_jinghanRR:0 "改善京汉铁路"
  QIE_jinghanRR_desc:0 "京汉铁路连接了我国所有主要的工业基地和农业产地。我们应提高其运力，以便使其更有效地调动士兵和战略物资。"
  QIE_liumenggengplan:0 "刘梦庚的计划"
  QIE_liumenggengplan_desc:0 "刘梦庚将军的计划着重于改善部队的后勤和支援系统，使他们能够更好地作战。但是，为此付出的代价则是用于生产防御工事的工业产出下降。"
  QIE_expandmines:0 "重组开滦矿务"
- QIE_expandmines_desc:0 "开滦矿务成立于1878年，是清廷与各类英国资本合伙的合资企业。开滦矿务在军阀时代的战乱中遭到了严重的破坏，我们必须重建并重组企业以使其为我们提供战争支援。"
+ QIE_expandmines_desc:0 "开滦矿务局成立于1878年，是清廷与各类英国资本合伙的合资企业。该机构在持续的军阀混战中遭到了忽视。而也许现在就是风平浪静之时——正好可以复兴开滦矿务局，并将其置于合适机构的管辖之下。"
+ QIE_expanding_our_shanxi_spoils:0 "开发山西半壁"
+ QIE_expanding_our_shanxi_spoils_desc:0 "晋东地区的煤矿是中国最珍贵的宝藏之一，我们成功在上次直奉战争中将其从阎锡山手中夺来。而自此以来，阎锡山都对此虎视眈眈，我们因而也对于本地的开发保持了克制。随着我们与这位模范督理关系日渐紧密，如今也没有什么失去这些土地的威胁了——不过大张旗鼓的动作还是可能激怒阎督理，务必要万分小心。"
  QIE_devscheme:0 "大冶-汉阳发展计划"
- QIE_devscheme_desc:0 "大冶-汉阳走廊集中了北京以外的大部分工业基地，但该地区的基础设施和城市规划仍有许多不足之处。通过投资以清理土地修建工厂，以及促进民用工业来支持军事工业，就可以使该地区实现现代化。"
- QIE_shanxicoal:0 "扩建山西煤田"
- QIE_shanxicoal_desc:0 "山西的煤矿是中国最珍贵的宝藏之一，我们成功在上次直奉战争中将其从阎锡山手中夺来。我们应该对其进行投资以推动我们不断发展的工业。不过这样可能会激怒阎锡山，所以我们务必小心一些。"
+ QIE_devscheme_desc:0 "环绕武汉的大冶-汉阳走廊集中了北京以外的大部分中国工业基地，但该地区的基础设施和城市规划仍有许多不足之处。通过投资以清理土地修建工厂，以及促进民用工业来支持军事工业，就可以使该地区及经济实现现代化，为当地人提供就业机会。"
+ QIE_gongxian_arsenal_expansion_office:0 "巩县兵工厂扩建署"
+ QIE_gongxian_arsenal_expansion_office_desc:0 "1915年由袁世凯、萨镇冰兴建的巩县兵工厂在规模和产能上仅次于更大的汉阳兵工厂。通过如二十年代那般扩大生产，我们可以充分改善我们的工业基础，以防其中某个兵工厂不幸在战争中落入敌手。"
  QIE_baodingarsenal:0 "扩建保定兵工厂"
  QIE_baodingarsenal_desc:0 "附属于保定武备学堂的保定兵工厂相对于巩县兵工厂是相对落后的。但是只要给他们提供足够的投资，我们就可以使其变为中国主要的军火制造商之一。好处是它离武备学堂在距离上也很近，因而它使我们能够结合理论和实践去测试新产品的设计。"
  QIE_warofnationalresistance:0 "民族抗战"
@@ -390,12 +403,8 @@
  QIE_manchu_air_warfare_desc:0 "尽管我们希望尽可能少地邀请洋人到我们的国家来，但没人会质疑洋人对空战这一领域的认识。我们应该研究它们的学说和战术，以便可以将其应用于我们自己的空军之中。"
  QIE_expand_baoding_rnd:0 "成立保定军事研究所"
  QIE_expand_baoding_rnd_desc:0 "为了让我们的军队沿着现代化的路线进行全面的改革，我们应该着手建立一个研究机构，来保证我们的部队可以紧跟技术创新。通过建立一个完全独立的保定军事研究所，我们的部队将拥有与世界上任何一支现代军队相当的技术支持。"
- QIE_commisars:0 "政治委员"
- QIE_commisars_desc:0 "刘梦庚提出了一个有意思的想法——在每一个部队编制中新添一个负责意识形态的委员。虽然这样的安排代价高昂，但势必能激发我们的军队以更加热烈的爱国之心进行战斗！"
- QIE_integration_harsh:0 "武力吞并"
- QIE_integration_harsh_desc:0 "违逆吾皇洪恩的叛徒不容怜悯！他们的土地将被武力并入我们伟大的国家！"
- QIE_integration_nice:0 "仁政方能定天下为一"
- QIE_integration_nice_desc:0 "曾割据中国大部的叛匪必须受到惩罚，而被他们压迫的农民则不必面临相同的命运。我们应该温和地将叛匪控制下的土地纳入我们的中央政府，以便所有中国人都能扬沐皇恩。"
+ QIE_a_competitive_army_and_industry:0 "军工竞业"
+ QIE_a_competitive_army_and_industry_desc:0 "以前，武器生产合同是临时签发的，而且各级腐败泛滥。通过发挥我们现有的政治影响力，我们可以对这些采购系统进行现代化和整理，使我们的军火工业采购水平达到西方标准。显然，只要确保合同商之间的良性竞争，中国武器有一天也能够享誉世界。"
  QIE_tianran_takes_over:0 "天师成为主宰"
  QIE_tianran_takes_over_desc:0 "皇帝向一贯道屈服，新秩序已然建立。是时候把我们的开明之治带到中国啦！"
  QIE_YGD_infiltrate_military:0 "渗透军队"
@@ -473,6 +482,24 @@
  QIE_legitimacy_of_the_monarchy_wu_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n尽管矛盾重重，但这个由直系集团与满清帝王合作建立的独特制度还是得以幸存，并得到了稳定而蓬勃的发展。在曹总裁和吴大帅的庇护下，清王朝采用了民族主义辩证法和反租界主义立场，从而得到了民众的支持。清王朝重获人民信任与执政合法性，进而对那些和谐社团的温和反对派打开了大门。随着国家重新统一，曾经信者寥寥的民主立宪君主制也近在眼前了。然而，站在皇位背后的真正力量——玉帅和保定王，两人仍然对共和梦想心怀信仰和同情，若未来爆发了新的冲突，这份和谐平衡随时可能会被破坏..."
  QIE_fractured_empire:0 "破碎的帝国"
  QIE_fractured_empire_desc:0 "理论上，大清帝国统御着除了满洲，西藏和蒙古之外的整个中国。实际上，皇帝的权力仅限于紫禁城内，而国会总裁曹锟的权力则仅限于国会会场内。吴佩孚是龙椅后的幕后操纵人，他对巩固自己在洛阳的政权基础和平衡军事集团之间的相互利益，比采取任何有意义的方式改善自己的国家更感兴趣。"
+ QIE_stalled_80_division_reform_plan:0 "停滞的“80师改革计划”"
+ QIE_stalled_80_division_reform_plan_desc:0 "在我们同德国靠山与盟友的合作下，柏林方面的军官顾问团试图将直系军改造成可堪代表德军在东方形象的部队。然而，腐败丛生、不思进取以及资金匮乏让这个雄心勃勃的计划长期停滞不前。"
+ QIE_in_the_footsteps_of_giants_level1: "追随巨人脚步"
+ QIE_in_the_footsteps_of_giants_level1_desc: "中央政府相信德国与北京方面的仁慈合作，尽管他们向德国让出了一些特权，但还是继续推行着军事改革的战略，并意图重启先前暂停的“80个师改革计划”，以打造一支俨然欧式部队的新精锐之师。"
+ QIE_in_the_footsteps_of_giants_level2:0 "$QIE_in_the_footsteps_of_giants_level1$"
+ QIE_in_the_footsteps_of_giants_level2_desc:0 "$QIE_in_the_footsteps_of_giants_level1_desc$"
+ QIE_in_the_footsteps_of_giants_level3:0 "$QIE_in_the_footsteps_of_giants_level1$"
+ QIE_in_the_footsteps_of_giants_level3_desc:0 "$QIE_in_the_footsteps_of_giants_level1_desc$"
+ QIE_in_the_footsteps_of_giants_level4:0 "$QIE_in_the_footsteps_of_giants_level1$"
+ QIE_in_the_footsteps_of_giants_level4_desc:0 "$QIE_in_the_footsteps_of_giants_level1_desc$"
+ QIE_formation_of_a_militaristic_state_people_level1: "构建“军国民”"
+ QIE_formation_of_a_militaristic_state_people_level1_desc: "作为其思想的开山鼻祖，蒋百里用其在保定、与蔡锷并肩作战乃至在直系服役的经历总结出了一套中央政府军应当力求的“军国民”模式。新的军队改革计划深信对全面战争的追求，强调领导人的非凡勇气和指挥水准，崇拜军国主义以及彻底地为国奉献。"
+ QIE_formation_of_a_militaristic_state_people_level2:0 "$QIE_formation_of_a_militaristic_state_people_level1$"
+ QIE_formation_of_a_militaristic_state_people_level2_desc:0 "$QIE_formation_of_a_militaristic_state_people_level1_desc$"
+ QIE_formation_of_a_militaristic_state_people_level3:0 "$QIE_formation_of_a_militaristic_state_people_level1$"
+ QIE_formation_of_a_militaristic_state_people_level3_desc:0 "$QIE_formation_of_a_militaristic_state_people_level1_desc$"
+ QIE_formation_of_a_militaristic_state_people_level4:0 "$QIE_formation_of_a_militaristic_state_people_level1$"
+ QIE_formation_of_a_militaristic_state_people_level4_desc:0 "$QIE_formation_of_a_militaristic_state_people_level1_desc$"
  QIE_big_debt:0 "无法抗拒的国家债务"
  QIE_big_debt_desc:0 "中国努力发展国民经济最终导致北京政府背负了巨额的贸易债务。工业机械的进口成本惊人，但国内的制造业却没能在国际上打开市场。中国的主要出口大宗到今天仍然是农产品，但与广泛进口的外国奢侈品（例如香烟和收音机）相比，这些经济作物的价格也实在低得可怜。普遍的制度化的腐败和“蓬勃发展”的鸦片贸易只会使问题进一步恶化。"
  QIE_black_monday:0 "黑色星期一"
@@ -481,6 +508,21 @@
  QIE_leadership_crisis_desc:0 "直系领导层里的军官大多都已经年老体衰，这是一个令人担忧的趋势，应当被尽快改善以免我们的军队彻底落入老顽固的控制之中。"
  QIE_leadership_crisis_bad:0 "进一步的领导层危机"
  QIE_leadership_crisis_bad_desc:0 "直系几位高级将领的去世进一步加重了我们在军咨府内缺乏年轻（甚至中年）面孔的情况。"
+ kaiping_mines_2: "开平煤矿"
+ QIE_kailuan_mining_bureau_idea: "开滦矿务局"
+ QIE_kailuan_mining_bureau_idea_desc: "令人遗憾的是，中国曾经如此繁荣昌盛，而如今无论是中央还是地方政府都经常浪费自己脚下的巨额财富储备。中国的地理位置得天独厚，赋予我们以丰富的矿产资源，如铁、煤和钨等作为馈赠。内阁现已决定重组开滦矿务局，以协助开采工作。此举旨在稳定我们的财政状况，并为政府提供急需的资金。"
+ QIE_daye_hanyang_rapid_development_scheme: "大冶-汉阳快速发展计划"
+ QIE_daye_hanyang_rapid_development_scheme_desc: "由于失去了经济最为活跃的天津、上海和香港等地，硕果仅存的如广东或南京等地又在不可靠的地方当局控制下，人们一直渴望在中原地区拥有自己的“东方巴黎”、“长三角明珠”或“珠三角明珠”。武汉外围的大冶-汉阳走廊是我们加大投资的不二之选，该地区现已拥有除北京外政府的大部分工业产能。"
+ QIE_support_KUM_idea: "支持哈密汗国"
+ QIE_attack_fed_GXC_idea: "消灭两广联省分子"
+ QIE_attack_fed_HNN_idea: "消灭湖南联省分子"
+ QIE_attack_fed_SZC_idea: "消灭四川联省分子"
+ QIE_attack_fed_YUN_idea: "消灭云南联省分子"
+ QIE_attack_FNG_idea: "进军戴河"
+ QIE_attack_kmt_CHI_idea: "左翼民党之隐患"
+ QIE_attack_kmt_GXC_idea: "两广民党之隐患"
+ QIE_attack_kmt_HNN_idea: "湖南民党之隐患"
+ QIE_attack_kmt_YUN_idea: "云南民党之隐患"
  QIE_outraged_parties:0 "愤怒的国会"
  QIE_outraged_parties_desc:0 "在我们决定支持八省联合之后，国会爆发了愤怒的抗议活动。但是基层的农民对此并不在乎，但我们仍需尽快采取行动以恢复政府的稳定。"
  QIE_popular_warlord_idea:0 "公众支持吴佩孚"
@@ -571,6 +613,8 @@
  QIE_foreign_advisory_training_desc:0 "在那些于中国大都会中事业失意的流亡军事人员的帮助下，中央军正进行着战略战术的理论现代化。与此同时，海空两军将士也在加紧训练，力图构建一支真正的现代化中国舰队及空军。"
  QIE_chinese_soldiers_german_weapons_idea:0 "中国士兵，德国武器"
  QIE_chinese_soldiers_german_weapons_idea_desc:0 "繁荣联盟和中国精兵的摇篮利用着其在中国国内与德国军火界的关系，努力为政府与各大军火商签订合同铺平道路。"
+ QIE_renovated_baoding_arsenal_idea: "复兴保定兵工厂"
+ QIE_renovated_baoding_arsenal_idea_desc: "保定军校兵工厂规模中等，但对于我们未来的军官队伍发展至关重要，因为其为军校中毕业的优秀学员提供了实践理论的环境。通过接受现代装备、现代教导，他们将成为一支精英队伍，进而帮助中国傲然屹立于民族之林。"
  QIE_national_aviation_programme: "国家航空计划"
  QIE_national_aviation_programme_desc: "中国虽然在空战领域长期追赶西方列强，但是中央政府过去几年也只能部署出几架过时的战斗机，运气好的时候可能凑得出一个飞行中队。全国各地的军阀都在尝试自己的航空计划，因此政府也绝不愿因在战争的第三条道路上被那些地方的督理、军头们超越而蒙羞。为此，中央政府动用了中欧同盟中的人脉，让国内工厂得以迈向精简生产需求的道路。"
  QIE_integrating_province:0 "整合中的省份"
@@ -591,8 +635,6 @@
  QIE_YCP_militarized_state_desc:0 "在中国青年党的管理下，清政府实现了快速的军事化。裙带关系的直系的指挥系统已经不复存在，取而代之的是一种新的、受西方启发的青训团体、现代化的征兵制度以及其他一系列的改革。"
  QIE_nationalized_yan_xishan_thought:0 "阎锡山思想国民化"
  QIE_nationalized_yan_xishan_thought_desc:0 "阎锡山督理在全国范围内传播了他的“阎锡山思想”，这一思想具有民族化，本土化和防御性的特征。"
- QIE_commisars_idea:0 "政委"
- QIE_commisars_idea_desc:0 "刘梦庚已将政委委派到我军，以爱国主义的宣传鼓舞他们为中国而战！"
  QIE_anqing_cooperation:0 "同新皖系的合作"
  QIE_anqing_cooperation1:0 "同新皖系的合作"
  QIE_anqing_cooperation2:0 "同新皖系的合作"
@@ -613,6 +655,8 @@
  QIE_anqing_loans_desc:0 "让其他的北方银行提供额外的贷款意味着我们可用的资金将会更少。但是为了增加在新皖系的影响力，这样做应该是值得的。"
  QIE_anqing_reconstruction_aid:0 "安庆的重建援助"
  QIE_anqing_reconstruction_aid_desc:0 "安庆遭受了在八省联合的崩溃时遭到了重创，新皖系统治的地区大部受到了严重破坏。我们已向他们提供支援，并在重建工作中提供其他的帮助。"
+ QIE_hubei_generals_dynamic_modifier: "湖北将军团"
+ QIE_hubei_generals_dynamic_modifier_desc: "“湖北将军团”由哈汉章发起和运营，此人是一名臭名昭著的军官，曾间接参与了1917年张勋复辟的企图。这个团体遍及各个经济部门，控制着武汉经济生产。在萧耀南督理和杜锡钧等人的协助下，湖北将军团对直系增强对湖北的控制大有裨益。而这个垄断团伙也已经被间接地合法化。"
  QIE_AOG_bank:0 "德华银行控股"
  QIE_german_influence_dynamic_modifier:0 "北京理事会的影响等级\n§g北京理事会是德国对北京政府直辖地区实施间接控制的代理人。他们直接资助了一个名为繁荣联盟的游说团体，在采用德国的企业管理方法并大力发展同德国自由贸易的同时，还在议会中占有多个席位。\n\n（此变量与市场自由主义的支持度有关。）§!\n\n每24小时更新一次"
  QIE_yiguandao_influence_dynamic_modifier:0 "一贯道的影响等级\n§g张天然和他的一贯道在我们推翻直系军阀的统治时候提供了帮助。这个神秘的教团现在越来越多得参与到我们的政治生活中。当他们提供有用的好处时，给予他们适当的赏赐可能会使他们在我国的影响力得到遏制。\n\n（此变量与国家民粹主义的支持度有关。）§!\n\n每24小时更新一次"
@@ -705,14 +749,6 @@
  QIE_kill_KMT:0 "消灭@CHI 国民党左派"
  QIE_demand_anqing_submit:0 "同@ANQ 安庆方面取得联系"
  QIE_demand_anqing_submit_desc:0 "鉴于我们的新共和政府采取坚定的反租界立场，所以一些人想知道与安庆的陈调元接触是否会是一个审慎的举动。他并没有与奉天政府保持一致，在他完全支持偏安北方的叛徒之前，我们也许可以介入并对他产生影响。"
- QIE_reach_out_to_sichuan:0 "同四川取得联系"
- QIE_reach_out_to_sichuan_desc:0 "[SZC.GetLeader]，我们在四川忠实的盟友已经确立了其对该省的统治。我们应该邀请他加入我们的联盟！"
- QIE_reach_out_to_lep:0 "同@LEP 宁系军阀取得联系"
- QIE_reach_out_to_lep_desc:0 "在八省联合崩溃期间，我们对宁系军阀提供的支援没有被遗忘，为此它们选择继续忠于我们的政府。随着如今该地区局势持续紧张，吴佩孚和他的顾问们提议与齐燮元元帅取得联系，并正式邀请他加入我们的政府，尽管这可能会招致德国的进一步干预。"
- QIE_reach_out_to_hengti:0 "同@HNN 汤芗铭取得联系"
- QIE_reach_out_to_hengti_desc:0 "尽管湖南统治者汤芗铭是我们阵营中相对的边缘人物。但是无论如何起码他是我们的人。"
- QIE_reach_out_to_yune:0 "同@SQI 靳云鹗取得联系"
- QIE_reach_out_to_yune_desc:0 "尽管山东统治者靳云鹗是我们阵营中相对的边缘人物。但是无论如何起码他是我们的人。"
  QIE_reach_out_armaments_division:0 "同@SZC 四川取得联系"
  QIE_reach_out_armaments_division_desc:0 "四川军备系的领袖杨森和刘存厚与直系之间保持着长期的联系。我们应该要求他们承认我政府对中国的合法统治，并正式将他们纳入我们的势力范围。"
  QIE_destroy_guominjun:0 "消灭@SHX 山西残余的国民军"
@@ -723,8 +759,6 @@
  QIE_sneak_attack_yan_desc:0 "阎锡山和奉天政府之间长期保持着联系，甚至阎锡山在上一次的直奉战争中也支持了奉系。如果我们对阎锡山发动进攻，很可能会使得奉系站到他们那一边去。不过一些更激进的将领提供了一份计划允许我们发动一场针对山西的出突袭，抓住阎锡山和[FNG.GetLeader]疏于防范的漏洞，并在奉天政府做出反应之前消灭山西的军队。不过其他的将军对此计划表示怀疑，他们声称自己的部队没有为这种突袭做好准备。不过如果突袭成功的话，我们可以在阎锡山有机会正式与奉天达成同盟协议之前将其消灭。"
  QIE_destroy_song_if_republic:0 "消灭@SQI 山东的保皇派"
  QIE_destroy_song_if_republic_desc:0 "由屈映光领导的山东食古不化又不合时宜的帝制支持者们并没有直接支持针对直系的政变企图，但是逃脱了内部清洗的满洲勋贵和其他保皇派都逃去了那里。我们应该摧毁君主制的前哨站，以永葆共和！"
- QIE_reach_out_to_song_if_zhili:0 "同@SQI 屈映光取得联系"
- QIE_reach_out_to_song_if_zhili_desc:0 "山东督理屈映光是出名的保皇派。虽然他并非直系主要的支持者，但他对皇帝的忠诚应该能让他加入我们的同盟。"
  QIE_zhili_kill_GXC:0 "消灭@GXC [GXC.GetName]"
  QIE_zhili_kill_GXC_desc:0 "愚蠢的南方人难道认为他们可以违逆我们吗？随着日本和奉天政府都被平定，我们现在可以向南进发，消灭这些叛徒。"
  QIE_zhili_kill_YUN:0 "消灭@YUN [YUN.GetName]"
@@ -878,8 +912,6 @@
  QIE_anq_counter_message_desc:0 "为了反驳陈调元那些耸人听闻的讲话，我们现在必须在整个新皖系控制的地区乃至全中国传播一个信息——陈调元错了。当中国本身的命运悬而未决时，地方自治就不应该拿到台面上去讨论。"
  QIE_anq_send_delegation:0 "同新皖系的正式谈判"
  QIE_anq_send_delegation_desc:0 "人们必须时不时地了解中国东部两个最强大的势力之间正在发生什么。北京联络委员会建议在南京举行一次大型的公开集会，以讨论新皖系与清政府之间的关系。"
- QIE_reach_out_to_anqing_before:0 "同@ANQ 安庆方面取得联系"
- QIE_reach_out_to_anqing_before_desc:0 "我们在新皖系和宁系交战中提供给前者的帮助并没有被遗忘。他们同我们维持了友好的关系，而如今同日本开战的威胁日益临近，吴佩孚的许多顾问都建议他同新皖系取得联系并邀请他们加入我们的联盟。"
  QIE_reach_out_to_anqing_during:0 "同@ANQ 安庆方面取得联系"
  QIE_reach_out_to_anqing_during_desc:0 "我们现在处于战争之中。安庆方面不应该再玩猫捉老鼠的游戏了，因为这关系到中国的未来。我们必须立即与他们取得联系并确保他们会为我们的目标而战。"
  QIE_reach_out_to_anqing_after:0 "同@ANQ 安庆方面取得联系"
@@ -963,8 +995,11 @@
  QIE_yiguandao_influence_unlocked_TT:0 "解锁£decision_icon_small §H决议§!以§Y吸引一贯道的影响力§!"
  QIE_yiguandao_militia_TT:0 "两支一贯道准军事武装部队已经准备好守卫皇帝陛下，将会在下个月转移交由我们指挥。"
  QIE_fallout_of_northwest_conflict_tooltip:0 "解锁£decision_icon_small §H决议§!以§Y保卫内地§!"
+ QIE_federalists_exists_tt: "中国存在联省派"
+ QIE_kuomintang_exists_tt: "中国存在国民党"
  QIE_destroy_isolated_warlords_tooltip:0 "解锁£decision_icon_small §H决议§!以§Y消灭孤立的军阀§!"
- QIE_rebuild_alliance_tooltip:0 "解锁£decision_icon_small §H决议§!以§Y重建我们的联盟§!。提示：要想让目标国家被邀请加入您的联盟，目标国家的内乱必须被终结。"
+ QIE_chosen_jiang_plan_tt: "§L如果我们选择蒋百里的计划：§!"
+ QIE_chosen_germany_plan_tt: "§L如果我们选择刘梦庚的计划：§!"
  QIE_hired_big_swords_TT:0 "§W大刀会将在开封响应召集§!"
  QIE_hired_red_spears_TT:0 "§W红枪会将在开封响应召集§!"
  QIE_imperial_consolidation_TT:0 "解锁£decision_icon_small §H决议§!以§Y开始安国运动§!"
@@ -988,6 +1023,8 @@
  QIE_end_concessions_TT:0 "解锁£decision_icon_small §H决议§!以夺取§Y澳门§!、§Y青岛§!和§Y其他的外国租界§!，前提是上述地区仍未受控制。"
  QIE_improve_legitimacy_tt: "§G民众对我们政府的看法将会改善！§!"
  QIE_debt_default_tt: "§R我们得出了结论，一切外来帝国主义势力强加给中国的条约、曾具约束力的债务都将成为空文废纸。我们也拒不承认他们财报上的一切巨额亏空。然而，这些帝国主义分子怕是不会善罢甘休。§!"
+ QIE_kaiping_mines_upgrade_tt: "§L我们当前的工业企业§Y开平煤矿§!将得到§Y升级：§!§!"
+ QIE_highlighting_our_goals_tt: "§L我们一系列更具政治倾向的将领将重新考虑其效忠的对象，失去§Y政治关联者§!特质。§!"
  QIE_consolidate_zhili_infantry_divisions: "§L直系军事人员将致力于把我们剩余的直系军阀步兵旅整合进新直系步兵师编制，这将为我们带来5支现代化师。§!"
  QIE_gain_zhili_infantry_division_template: "创建1个§Y直隶步兵师§!部队编制。\n- §Y步兵营§!x10\n- §Y火炮支援连§!\n- §Y工兵连§!"
  breach_dams_TT:0 "解锁£decision_icon_small §H决议§!来§Y掘开黄河堤坝。§!如果你在和平时期完成了这个国策，你可以将平民转移离开危险地区，在某种程度上减轻洪水将会带来的负面效果。"
@@ -1472,6 +1509,14 @@
  qiefor.24.d:0 "随着我们最近对山西地区采矿业的关注，我们在那里发现了大量的矿产资源。在上次直奉战争中，我们从阎督理那里夺取了这片土地，真是撞大运了！我们的工程师刚刚发现了一个新的矿脉，那里的矿床满是煤和铁矿石，但唯一的问题是它延伸到地下，进入了阎锡山的领地。毫无疑问，阎锡山的工程师会注意到我们的偷挖。\n\n自八省联合崩溃后阎锡山就和张作霖结盟，而他们的同盟关系越来越密切。吴佩孚的顾问发出警告，这很可能会加剧我们与奉天政府之间的紧张关系。"
  qiefor.24.a:0 "能挖多深挖多深！"
  qiefor.24.b:0 "风险太大了……"
+ qiefor.24001.t:0 "[QIE.GetName]提议联合采矿工程"
+ qiefor.24001.d:0 "为了国家能在战略自然资源上自给自足，[QIE.GetName]进行了资源探察，发现了大量矿产，其中一条矿脉延伸到我们的地盘下面。他们提出由他们的工程师和可能是外国投资的矿业集团合作，帮助山西省开采煤炭和铁矿石。当然，我们会得到他们说的“公平的份额”，预计双方的净利润都很可观。\n\n但是，我们也不得不提醒自己，即使我们已经忠于他们近十年，[QIE.GetName]的军队仍一直占领着理应归属山西的晋东地区，攫取了该地区丰富资源，却只支付了微不足道的费用，甚至根本就没给，而山西本来能因此大为获利。有些人认为，原则上我们应该拒绝与北京达成协议，直到他们不再占领晋东为止。"
+ qiefor.24001.a:0 "批准协议。"
+ qiefor.24001.b:0 "我们自己会挖。"
+ qiefor.24002.t:0 "发现富矿！"
+ qiefor.24002.d:0 "随着我们最近对山西地区采矿业的关注，我们在那里发现了大量的矿产资源。这恰好符合了山西最近的转变：在第四次直奉战争中惨败后，山西部分放开了商业，减轻了金融孤立的程度。他们那雄心勃勃的经济改革，即“十年计划”的成果难以忽视，但是，我们还不清楚这个计划是真的为了促进繁荣，还是为挑战我们做准备。\n\n但是，已经发现的这条富矿极具价值，并一直延伸到山西境内。由于山西正采取外向型经济政策，他们有可能愿意参与互惠互利的开采项目。这将大大增加煤炭和钢铁的产量，为整个中国的安全出一份力，还会大大增加我们的影响力。但是，所有这一切都取决于善变的[SHX.GetLeader]会不会接受。"
+ qiefor.24002.a:0 "我们当然可以达成协议。"
+ qiefor.24002.b:0 "我们不应介入。"
  qiefor.25.t:0 "[QIE.GetName]的矿工接近我们的领土！"
  qiefor.25.d:0 "军座！我们有重大消息！我们的矿工发现了[QIE.GetName]的隧道延伸到我们的领土！毫无疑问，他们正试图为自己的邪恶目的而获取我省丰富的矿产资源。我们必须立即抗议！"
  qiefor.25.a:0 "提出正式抗议"
